--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/bg_bg.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/bg_bg.json
@@ -67,39 +67,8 @@
   "tooltip.rei.fluid_amount": "§7%d Мерна единица",
   "msg.rei.recipe_id_details": "Ид.№ на рецепта: %s",
   "subsets.rei.roughlyenoughitems.all_entries": "Всички влизания",
-  "config.roughlyenoughitems.appearance": "Външен вид",
-  "config.roughlyenoughitems.cheating": "Измама:",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Показване на рецепта:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Показване на употребата:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Следваща страница:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Предишна страница:",
-  "config.roughlyenoughitems.recipeScreenType.original": "Original",
-  "config.roughlyenoughitems.filtering": "Филтриране",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Избор на всичко",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Без избора на всичко",
   "config.roughlyenoughitems.filteredEntries.hide": "Скриване на избраното",
-  "config.roughlyenoughitems.filteredEntries.show": "Показване на избраното",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Първо да зареди светът!",
-  "config.roughlyenoughitems.search.asyncSearch": "Асинхронно търсене:",
-  "config.roughlyenoughitems.theme": "Външност на тема:",
-  "config.roughlyenoughitems.theme.dark": "Тъмна тема",
-  "config.roughlyenoughitems.theme.light": "Светла тема",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Максимум рецепти за страница:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Зареждане на стандартна приставка:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cНе (Опасно)",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "language.roughlyenoughitems.english": "английски",
-  "language.roughlyenoughitems.japanese": "японски",
-  "language.roughlyenoughitems.chinese_simplified": "опростен китайски",
-  "language.roughlyenoughitems.chinese_traditional": "традиционен китайски",
-  "language.roughlyenoughitems.french": "френски",
-  "language.roughlyenoughitems.german": "немски",
-  "language.roughlyenoughitems.estonian": "естонски",
-  "language.roughlyenoughitems.portuguese": "португалски",
-  "language.roughlyenoughitems.portuguese_brazilian": "бразилски португалски",
-  "language.roughlyenoughitems.lolcat": "ЛОЛКАТ",
-  "language.roughlyenoughitems.upside_down_english": "преобърнат английски с главата надолу",
-  "language.roughlyenoughitems.bulgarian": "български",
-  "language.roughlyenoughitems.russian": "руски",
-  "language.roughlyenoughitems.polish": "полски"
+  "config.roughlyenoughitems.filteredEntries.show": "Показване на избраното"
 }
