--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/da_dk.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/da_dk.json
@@ -1,158 +1,109 @@
 {
   "text.rei.cheating": "Snyd",
-  "text.rei.cheating_disabled": "§7Snyd Deaktiveret",
-  "text.rei.cheating_enabled": "§cSnyd Aktiveret",
+  "text.rei.cheating_disabled": "§7Snyd deaktiveret",
+  "text.rei.cheating_enabled": "§cSnyd aktiveret",
   "text.rei.search.field.suggestion": "Søg...",
+  "text.rei.config.menu.dark_theme": "Mørkt tema",
+  "text.rei.config.menu.config": "Flere indstillinger...",
   "category.rei.crafting": "Fremstilling",
   "category.rei.smelting": "Smeltning",
   "category.rei.smelting.fuel": "Brændsel",
   "category.rei.fuel": "Brændsel",
-  "category.rei.fuel.time": "Brændetid: %d ticks",
+  "category.rei.fuel.time": "Brændetid: %d tik",
   "category.rei.fuel.time.items": "Brændetid: %s genstand(e)",
-  "category.rei.fuel.time_short": "%d ticks",
+  "category.rei.fuel.time_short": "%d tik",
   "category.rei.fuel.time_short.items": "%s genstand(e)",
   "category.rei.smoking": "Røgning",
   "category.rei.campfire": "Bål",
   "category.rei.campfire.time": "%s sek",
   "category.rei.stone_cutting": "Stenskæring",
   "category.rei.brewing": "Brygning",
-  "category.rei.brewing.input": "Originale Eliksir",
+  "category.rei.brewing.input": "Originale eliksir",
   "category.rei.brewing.reactant": "Ingrediens",
-  "category.rei.brewing.result": "Resulterende Eliksir",
+  "category.rei.brewing.result": "Resulterende eliksir",
   "category.rei.composting": "Kompostering",
   "category.rei.stripping": "Afbarkning",
   "category.rei.smithing": "Smedning",
   "category.rei.beacon_base": "Signallys-bund",
   "category.rei.beacon_payment": "Signallys-betaling",
+  "category.rei.oxidizing": "Oxidation",
   "category.rei.information": "Information",
-  "text.rei.composting.chance": "§e%d%% Chance",
+  "text.rei.composting.chance": "§e%d%% chance",
   "text.rei.composting.page": "Side %d",
-  "text.rei.config": "Konfig",
-  "text.rei.config_tooltip": "Åbn konfigskærm\n§7Skift-Klik for at slå snydetilstand til/fra",
+  "text.rei.config": "Konfiguration",
+  "text.rei.config_tooltip": "Åbn konfigurationsskærm\n§7Skift-klik for at slå snydetilstand til/fra",
   "text.rei.cheat_items": "Gav [{item_name}§f] x{item_count} til {player_name}.",
   "text.rei.failed_cheat_items": "§cKunne ikke give genstande.",
+  "text.rei.accepts": "Accepterer følgende:",
+  "text.rei.missing": "Mangler følgende:",
+  "text.rei.input.methods.default": "Standard",
+  "text.rei.hint.configure": "Konfigurér",
+  "text.rei.hint.ignore": "Ignorér",
   "ordering.rei.ascending": "Stigende",
   "ordering.rei.descending": "Faldende",
   "ordering.rei.registry": "Register",
   "ordering.rei.name": "Navn",
   "ordering.rei.item_groups": "Genstandsgrupper",
-  "text.auto_craft.move_items": "Flyt Genstande",
+  "text.auto_craft.move_items": "Flyt genstande",
   "error.rei.not.on.server": "REI er ikke på serveren.",
   "error.rei.not.enough.materials": "Ikke nok materialer.",
-  "error.rei.internal.error": "Intern Fejl: %s",
-  "text.rei.showing_craftable": "Viser Fremstillelige",
-  "text.rei.showing_all": "Viser Alle",
+  "error.rei.internal.error": "Intern fejl: %s",
+  "error.rei.multi.errors": "Flere fejl:",
+  "text.rei.showing_craftable": "Viser fremstillelige",
+  "text.rei.showing_all": "Viser alle",
+  "text.rei.delete_items": "§cSlet genstand",
   "text.rei.left_arrow": "<",
   "text.rei.right_arrow": ">",
-  "text.rei.view_all_categories": "Vis Alle Kategorier",
-  "text.rei.go_back_first_page": "Tilbage til Side 1",
-  "text.rei.choose_page": "Vælg Side",
+  "text.rei.view_all_categories": "Vis alle kategorier",
+  "text.rei.go_back_first_page": "Tilbage til side 1",
+  "text.rei.choose_page": "Vælg side",
   "text.rei.gamemode_button.tooltip.entry": "Skift til %s",
   "text.rei.weather_button.tooltip.entry": "Skift til %s",
+  "text.rei.time_button.name.morn": "Morgen",
+  "text.rei.time_button.name.noon": "Middag",
+  "text.rei.time_button.name.evening": "Aften",
+  "text.rei.time_button.name.night": "Nat",
   "text.rei.enabled": "Ja",
   "text.rei.disabled": "Nej",
   "text.rei.short_gamemode.survival": "O",
   "text.rei.short_gamemode.creative": "K",
   "text.rei.short_gamemode.adventure": "E",
   "text.rei.short_gamemode.spectator": "T",
-  "text.rei.weather.clear": "Klar Himmel",
+  "text.rei.weather.clear": "Klar himmel",
   "text.rei.weather.rain": "Regn",
   "text.rei.weather.thunder": "Torden",
-  "text.rei.previous_category": "Forrige Kategori",
-  "text.rei.next_category": "Næste Kategori",
-  "text.rei.previous_page": "Forrige Side",
-  "text.rei.next_page": "Næste Side",
+  "text.rei.previous_category": "Forrige kategori",
+  "text.rei.next_category": "Næste kategori",
+  "text.rei.previous_page": "Forrige side",
+  "text.rei.next_page": "Næste side",
   "text.rei.back": "Tilbage",
   "text.rei.select": "Vælg",
   "text.rei.favorites": "Favoritter",
-  "text.rei.jei_compat": "JEI-Kompatibilitetslag",
-  "text.rei.jei_compat.false": "JEI-Kompatibilitetslag: Deaktiveret",
-  "text.rei.jei_compat.true": "JEI-Kompatibilitetslag: Aktiveret",
+  "text.rei.recipe_screen_type.selection.sub": "Du kan altid ændre denne indstilling igen via konfigurationsskærmen.",
+  "text.rei.jei_compat": "JEI-kompatibilitetslag",
+  "text.rei.jei_compat.false": "JEI-kompatibilitetslag: Deaktiveret",
+  "text.rei.jei_compat.true": "JEI-kompatibilitetslag: Aktiveret",
   "text.rei.add_favorite_widget": "Tilføj...",
   "favorite.section.gamemode": "Spiltilstand",
   "favorite.section.weather": "Vejr",
-  "tooltip.rei.drag_to_add_favorites": "§7Træk op for at tilføje dette til dine favoritter!",
+  "favorite.section.time": "Tid",
+  "msg.rei.recipe_id_details": "Opskrift-ID: %s",
   "msg.rei.exported_recipe.desc": "Tjek mappen 'rei_exports'.",
-  "config.roughlyenoughitems.basics": "Grundlæggende",
-  "config.roughlyenoughitems.appearance": "Udseende",
-  "config.roughlyenoughitems.functionality": "Funktionalitet",
-  "config.roughlyenoughitems.advanced": "Avanceret",
-  "config.roughlyenoughitems.cheating": "Snyd:",
-  "config.roughlyenoughitems.favoritesEnabled": "Favoritter Aktiveret:",
-  "config.roughlyenoughitems.keyBindings": "Genvejstaster",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Skjul/Vis REI:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Næste Side:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Forrige Side:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Forrige Skærm:",
-  "config.roughlyenoughitems.cheatingStyle": "Snydestil:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Tag",
-  "config.roughlyenoughitems.cheatingStyle.give": "Giv",
-  "config.roughlyenoughitems.motion": "Animations- / Bevægelsesindstillinger",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Konfigskærm Animeret:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "Favoritter Animeret:",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Ikke Sat",
-  "config.roughlyenoughitems.recipeScreenType.original": "Standard",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Sammensat",
-  "config.roughlyenoughitems.layout": "Layout",
-  "config.roughlyenoughitems.search": "Søg",
-  "config.roughlyenoughitems.commands": "Kommandoer",
-  "config.roughlyenoughitems.filtering": "Filtrering",
-  "config.roughlyenoughitems.miscellaneous": "Diverse",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Oppe",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Nede",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Vælg Alle",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Fravælg Alle",
-  "config.roughlyenoughitems.filteredEntries.hide": "Skjul Valgte",
-  "config.roughlyenoughitems.filteredEntries.show": "Vis Valgte",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Indlæs Verden Først!",
-  "config.roughlyenoughitems.theme.dark": "Mørkt Tema",
-  "config.roughlyenoughitems.theme.light": "Lyst Tema",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Lysere",
-  "config.roughlyenoughitems.recipeBorder.default": "Standard",
-  "config.roughlyenoughitems.recipeBorder.none": "Ingen",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Venstre Side",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Højre Side",
-  "config.roughlyenoughitems.search_mode.always": "Altid Aktiveret",
-  "config.roughlyenoughitems.search_mode.never": "Altid Deaktiveret",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Søgefelts-position:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "Nederst Til Venstre / Højre",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "Øverst Til Venstre / Højre",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Midte",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Aldrig",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Når Inaktiv",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNej",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aJa",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Omvendt",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Sideinddelt",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Farverig",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Farverig (Understreget)",
-  "config.roughlyenoughitems.filteringScreen": "Brugerdefineret Filtrering",
-  "config.roughlyenoughitems.filteringRulesScreen": "Brugerdefinerede Filtreringsregler",
-  "config.roughlyenoughitems.filteringRulesScreen.new": "Opret Filtreringsregel",
+  "subsets.rei.roughlyenoughitems.item_groups": "Kreativfaner",
+  "config.roughlyenoughitems.filteringScreen": "Brugerdefineret filtrering",
+  "config.roughlyenoughitems.filteringRulesScreen": "Brugerdefinerede filtreringsregler",
+  "config.roughlyenoughitems.filteringRulesScreen.new": "Opret filtreringsregel",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Slet",
-  "rule.roughlyenoughitems.filtering.manual": "Manuel Filtrering",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Vælg alle",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Fravælg alle",
+  "config.roughlyenoughitems.filteredEntries.hide": "Skjul valgte",
+  "config.roughlyenoughitems.filteredEntries.show": "Vis valgte",
+  "rule.roughlyenoughitems.filtering.manual": "Manuel filtrering",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Vælg manuelt, hvad der skal skjules og vises.",
   "rule.roughlyenoughitems.filtering.search": "Søgefiltrering",
   "rule.roughlyenoughitems.filtering.search.subtitle": "Filtrer med søgefiltre.",
   "rule.roughlyenoughitems.filtering.search.filter": "Søgefilter:",
-  "rule.roughlyenoughitems.filtering.search.show": "Vis / Skjul:",
+  "rule.roughlyenoughitems.filtering.search.show": "Vis / skjul:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Vis",
-  "rule.roughlyenoughitems.filtering.search.show.false": "Skjul",
-  "language.roughlyenoughitems.english": "Engelsk",
-  "language.roughlyenoughitems.japanese": "Japansk",
-  "language.roughlyenoughitems.chinese_simplified": "Kinesisk Forenklet",
-  "language.roughlyenoughitems.chinese_traditional": "Kinesisk Traditionelt",
-  "language.roughlyenoughitems.french": "Fransk",
-  "language.roughlyenoughitems.german": "Tysk",
-  "language.roughlyenoughitems.estonian": "Estisk",
-  "language.roughlyenoughitems.portuguese": "Portugisisk",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portugisisk, Brasiliansk",
-  "language.roughlyenoughitems.lolcat": "LOLCAT",
-  "language.roughlyenoughitems.upside_down_english": "Engelsk På Hovedet",
-  "language.roughlyenoughitems.bulgarian": "Bulgarsk",
-  "language.roughlyenoughitems.russian": "Russisk",
-  "language.roughlyenoughitems.polish": "Polsk"
+  "rule.roughlyenoughitems.filtering.search.show.false": "Skjul"
 }
