--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
@@ -78,6 +78,7 @@
   "text.rei.addons": "REI Add-ons",
   "text.rei.shapeless": "Formlos",
   "text.rei.input.methods": "Eingabemethoden",
+  "text.rei.input.methods.reload.progress": "Fortschritt: %s%%",
   "text.rei.input.methods.default": "Standard",
   "text.rei.input.methods.default.description": "Die Standard Eingabemethode. Dies verändert den Suchbegriff nicht.",
   "text.rei.input.methods.jyutping": "Jyutping (Kantonese)",
@@ -88,6 +89,9 @@
   "text.rei.input.methods.bopomofo.description": "Die Eingabemethode um chinesische Zeichen mit Bopomofo (Mandarin) übereinzustimmen.",
   "text.rei.input.methods.hint": "Alternative Eingabemethoden sind für deine Sprache verfügbar.",
   "text.rei.input.methods.initializing": "Initialisiere Eingabemethoden",
+  "text.rei.input.methods.tooltip.hints": "Werkzeughinweise anzeigen",
+  "text.rei.hint.input.methods": "Herzlichen Glückwunsch zur Einrichtung einer Eingabemethode!\nSie können dies mit dem Suchfilter-Button neu konfigurieren!",
+  "text.rei.hint.favorites.discover": "Du hast gerade einen Lieblingseintrag entfernt!\nDu kannst ihn wieder hinzufügen, indem du hier auf die + Schaltfläche klickst!",
   "text.rei.hint.configure": "Konfigurieren",
   "text.rei.hint.ignore": "Ignorieren",
   "ordering.rei.ascending": "Aufsteigend",
@@ -176,6 +180,10 @@
   "text.rei.changelog.error.missingChangelogFile": "Fehlende Änderungsprotokolldatei!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Fehler beim Lesen der Änderungsprotokolldatei!",
   "text.rei.collapsed.entry": "Eingeklappter Eintrag: %s",
+  "text.rei.collapsed.entry.hint.expand": "Alt drücken, um alle %s (%d Einträge) zu erweitern.",
+  "text.rei.collapsed.entry.hint.expand.macos": "Optionen drücken, um alle %s  (%d Einträge) zu erweitern.",
+  "text.rei.collapsed.entry.hint.collapse": "Alt drücken, um alle %s (%d Einträge) einzuklappen.",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Optionen drücken, um alle %s (%d Einträge) einzuklappen.",
   "favorite.section.gamemode": "Spielmodus",
   "favorite.section.weather": "Wetter",
   "favorite.section.time": "Zeit",
@@ -190,151 +198,19 @@
   "subsets.rei.roughlyenoughitems.item_groups": "Kreativ-Inventar-Tabs",
   "_comment": "Konfigurations-Tooltips",
   "config.roughlyenoughitems.title": "Roughly Enough Items Konfiguration",
-  "config.roughlyenoughitems.basics": "Grundlagen",
-  "config.roughlyenoughitems.appearance": "Darstellung",
-  "config.roughlyenoughitems.functionality": "Funktionalität",
-  "config.roughlyenoughitems.advanced": "Erweitert",
-  "config.roughlyenoughitems.cheating": "Schummeln:",
-  "config.roughlyenoughitems.cheating.when_creative": "Im Kreativmodus",
-  "config.roughlyenoughitems.favoritesEnabled": "Favoriten aktiviert:",
-  "config.roughlyenoughitems.keyBindings": "Tastaturbelegungen",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Zeige Rezept:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Verstecke/Zeige REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Zeige Verwendungen:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Nächste Seite:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Vorherige Seite:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Suchfeld fokussieren:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Rezept-Identifizierer kopieren:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Rezept exportieren",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Favoriten-Eintrag:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Vorheriger Bildschirm:",
-  "config.roughlyenoughitems.cheatingStyle": "Cheating Style:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Nehmen",
-  "config.roughlyenoughitems.cheatingStyle.give": "Geben",
-  "config.roughlyenoughitems.motion": "Animation / Bewegungs Einstellungen",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Animierter Konfigurationsbildschirm:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "Anzeige von Beteiligten animieren:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "Favoriten animieren:",
-  "config.roughlyenoughitems.recipeScreenType": "Art des Rezept-Bildschirms:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Art des Rezept-Bildschirms: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Nicht Gesetzt",
-  "config.roughlyenoughitems.recipeScreenType.original": "Standard",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Zusammensetzen",
-  "config.roughlyenoughitems.layout": "Layout",
-  "config.roughlyenoughitems.tooltips": "Tooltips",
-  "config.roughlyenoughitems.accessibility": "Bedienungshilfen",
-  "config.roughlyenoughitems.search": "Suche",
-  "config.roughlyenoughitems.commands": "Befehle",
-  "config.roughlyenoughitems.filtering": "Filtern",
-  "config.roughlyenoughitems.miscellaneous": "Verschiedenes",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Klickbare Rezeptpfeile:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Aktiviere Untergruppen:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Inventarhervorhebung aktiviert:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Rendere Verzauberungsschimmer:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Position des Konfigurationsknopfes:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Obere",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Untere",
-  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Vereine alle Displays mit demselben Inhalt",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favoriten Widget-Schaltfläche hinzufügen:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Immer unsichtbar",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Automatisch ausblenden",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Immer sichtbar",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Alles Auswählen",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Alle abwählen",
-  "config.roughlyenoughitems.filteredEntries.hide": "Auswahl verstecken",
-  "config.roughlyenoughitems.filteredEntries.show": "Auswahl anzeigen",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Lade zuerst eine Welt!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Eintragsgröße:",
-  "config.roughlyenoughitems.search.asyncSearch": "Asynchrone Suche",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "\"Async Suche\"-Partitionsgröße",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Kompakte Tabs:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Kompakte Tab Pfeiltasten:",
-  "config.roughlyenoughitems.theme": "Erscheinungsbild:",
-  "config.roughlyenoughitems.theme.dark": "Dunkles Design",
-  "config.roughlyenoughitems.theme.light": "Helles Design",
-  "config.roughlyenoughitems.recipeBorder": "Rand der Rezept-Anzeige:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Heller",
-  "config.roughlyenoughitems.recipeBorder.default": "Standard",
-  "config.roughlyenoughitems.recipeBorder.none": "Keiner",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Maximale Anzahl Rezepte pro Seite:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Maximale Rezeptseitenhöhe:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Start Panel Position:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Linke Seite",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Rechte Seite",
-  "config.roughlyenoughitems.search.tooltipSearch": "Tooltip Suche (#):",
-  "config.roughlyenoughitems.search.tagSearch": "Tag Suche ($):",
-  "config.roughlyenoughitems.search.identifierSearch": "Identifikatorsuche (*):",
-  "config.roughlyenoughitems.search.modSearch": "Mod Suche (@):",
-  "config.roughlyenoughitems.search_mode.always": "Immer Aktiviert",
-  "config.roughlyenoughitems.search_mode.prefix": "Wenn ein Präfix verwendet wird",
-  "config.roughlyenoughitems.search_mode.never": "Immer Deaktiviert",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Itemlisten Debug Modus",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Suche Debug-Modus",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Dynamisch skalieren:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Position des Suchfelds:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "Unten Links / Rechts",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "Oben Links / Rechts",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Mitte",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Scrollbar Ausblenden:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Niemals",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Wenn Inaktiv",
-  "config.roughlyenoughitems.disableRecipeBook": "Vanilla Rezeptbuch:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNein",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aJa",
-  "config.roughlyenoughitems.leftSideMobEffects": "Position der Mob-Effekte:",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Links",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Rechts (Vanilla)",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Korrigier den Vanilla Tab Container (wenn das Rezeptbuch deaktiviert ist):",
-  "config.roughlyenoughitems.lighterButtonHover": "Helles Button-Hovern:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filter für Herstellbare Gegenstände:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Werkzeugknöpfe:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Befehl Spielmodus-Wechsel:",
-  "config.roughlyenoughitems.commands.giveCommand": "Geben-Befehl:",
-  "config.roughlyenoughitems.commands.timeCommand": "Zeit-Befehl:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Standard-Plugin laden:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNein (Gefährlich)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI Neustart Thread:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI Thread",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cPaket-Thread",
-  "config.roughlyenoughitems.commands.weatherCommand": "Wetter Befehl:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Reihenfolge der Itemlisten:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Schnelleres Eintrags-Rendering:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Eintrags-Render cachen:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Diese Option verbessert die Leistung bei der Darstellung von Einträgen bis zu 5x, mit durchschnittlich 2.5x Leistungssteigerung. Dies wird jedoch das Verzauberungsleuchten und animierte Texturen zerstören.",
-  "config.roughlyenoughitems.itemCheatingMode": "Anzahl der Gegenstände beim Cheaten:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Umgekehrt",
-  "config.roughlyenoughitems.search.searchFavorites": "Suchfilter in Favoriten:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Mod-Namen anhängen:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Favoriten-Hinweis anhängen:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Zu Itemlisten hinziehen:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Kopiere Identifizierer-Toast:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Darstellung der Gegenstandsliste:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Bildlauf",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Mehrere Seiten",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "horizontale Eintragsbegrenzung",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "vertikale Entragsbegrenzung",
-  "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "Eingabespaltenbegrenzung:",
-  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "Eingabezeilenbegrenzung:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "horizontale Favoriten Grenzen:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "Eingabespaltenbegrenzung:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Syntax-Hervorhebungsmodus:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Normal",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Normal (Unterstrichen)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Farbig",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Farbig (Unterstrichen)",
-  "config.roughlyenoughitems.isFocusModeZoomed": "Eintragsfokus Modus:",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Vergrössert",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Hervorgehoben",
-  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Soll Filter anzeigen:",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Konfigurieren...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Schnellherstellungskategorien konfigurieren",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Umschalten",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Verfügbar für die Schnellherstellung",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Ausgeschlossen von der Schnellherstellung",
   "config.roughlyenoughitems.filteringScreen": "Benutzerdefiniertes filtern",
   "config.roughlyenoughitems.filteringRulesScreen": "Benutzerdefinierte Filterregeln",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Filterregel erstellen",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Löschen",
   "config.roughlyenoughitems.filteringRulesScreen.hint": "Versuche Drag+Drop!",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Alles Auswählen",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Alle abwählen",
+  "config.roughlyenoughitems.filteredEntries.hide": "Auswahl verstecken",
+  "config.roughlyenoughitems.filteredEntries.show": "Auswahl anzeigen",
   "rule.roughlyenoughitems.filtering.manual": "Manuelles Filtern",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Wähle aus, was versteckt und angezeigt werden soll.",
   "rule.roughlyenoughitems.filtering.search": "Suche filtern",
@@ -343,27 +219,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Zeigen / Verbergen:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Zeigen",
   "rule.roughlyenoughitems.filtering.search.show.false": "Verbergen",
-  "language.roughlyenoughitems.english": "Englisch",
-  "language.roughlyenoughitems.japanese": "Japanisch",
-  "language.roughlyenoughitems.chinese_simplified": "Chinesisch (Vereinfacht)",
-  "language.roughlyenoughitems.chinese_traditional": "Chinesisch (Traditionell)",
-  "language.roughlyenoughitems.chinese_traditional_hong_kong": "Traditionelles Chinesisch (Hongkong)",
-  "language.roughlyenoughitems.french": "Französisch",
-  "language.roughlyenoughitems.german": "Deutsch",
-  "language.roughlyenoughitems.estonian": "Estnisch",
-  "language.roughlyenoughitems.portuguese": "Portugiesisch",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portugiesisch (Brasilianisch)",
-  "language.roughlyenoughitems.lolcat": "LOLCAT",
-  "language.roughlyenoughitems.upside_down_english": "Englisch (verkehrtrum)",
-  "language.roughlyenoughitems.bulgarian": "Bulgarisch",
-  "language.roughlyenoughitems.russian": "Russisch",
-  "language.roughlyenoughitems.polish": "Polnisch",
-  "language.roughlyenoughitems.norwegian": "Norwegisch",
-  "language.roughlyenoughitems.turkish": "Türkisch",
-  "language.roughlyenoughitems.ukrainian": "Ukrainisch",
-  "language.roughlyenoughitems.spanish": "Spanisch",
-  "language.roughlyenoughitems.italian": "Italienisch",
-  "language.roughlyenoughitems.czech": "Tschechisch",
-  "language.roughlyenoughitems.danish": "Dänisch",
-  "language.roughlyenoughitems.hebrew": "Hebräisch"
+  "rule.roughlyenoughitems.filtering.basic": "Einfache Plugin-Filterung",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Einträge nach REI-Plugins filtern ist hier nicht möglich.",
+  "rule.roughlyenoughitems.filtering.hide.tag": "Tag-Filter",
+  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Einträge nach 'c:hidden_from_recipe_viewers' filtern. Dies ist hier nicht konfigurierbar."
 }
