--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/eo_uy.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/eo_uy.json
@@ -124,64 +124,14 @@
   "subsets.rei.roughlyenoughitems.all_entries": "Ĉiuj Eroj",
   "subsets.rei.roughlyenoughitems.item_groups": "Kreaj Langetoj",
   "config.roughlyenoughitems.title": "Roughly Enough Items Agordo",
-  "config.roughlyenoughitems.basics": "Bazaĵoj",
-  "config.roughlyenoughitems.appearance": "Aspekto",
-  "config.roughlyenoughitems.functionality": "Funkciado",
-  "config.roughlyenoughitems.advanced": "Altnivela",
-  "config.roughlyenoughitems.cheating": "Trompado:",
-  "config.roughlyenoughitems.favoritesEnabled": "Legosignoj Ŝaltitaj:",
-  "config.roughlyenoughitems.keyBindings": "Klavkombinoj",
-  "config.roughlyenoughitems.cheatingStyle": "Trompstilo:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Kapti",
-  "config.roughlyenoughitems.cheatingStyle.give": "Aldoni",
-  "config.roughlyenoughitems.recipeScreenType": "Speco de Receptekrano:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Speco de Receptekrano: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Malŝalti",
-  "config.roughlyenoughitems.recipeScreenType.original": "Defaŭlta",
-  "config.roughlyenoughitems.layout": "Aranĝo",
-  "config.roughlyenoughitems.tooltips": "Ŝpruchelpiloj",
-  "config.roughlyenoughitems.accessibility": "Alirebleco",
-  "config.roughlyenoughitems.search": "Serĉo",
-  "config.roughlyenoughitems.commands": "Komandoj",
-  "config.roughlyenoughitems.filtering": "Filtrado",
-  "config.roughlyenoughitems.miscellaneous": "Diversaĵoj",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Subaroj Ŝaltitaj:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Markado de Inventaro",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Supra",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Suba",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Elekti Ĉiujn",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Elekti Neniujn",
-  "config.roughlyenoughitems.filteredEntries.hide": "Kaŝi Elektitajn",
-  "config.roughlyenoughitems.filteredEntries.show": "Montri Elektitajn",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Ŝarĝi Mondon Unue!",
-  "config.roughlyenoughitems.recipeBorder": "Bordero de Montrado de Receptoj:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Pli Hela",
-  "config.roughlyenoughitems.recipeBorder.default": "Defaŭlta",
-  "config.roughlyenoughitems.recipeBorder.none": "Neniu",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Pozicio de Erpanelo:",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Erpanelo Sencimiga Reĝimo:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Regrandigi Dinamike:",
-  "config.roughlyenoughitems.disableRecipeBook": "Vanila Receptlibro:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNe",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aJes",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Ripari Vanila Langetujo (Kiam Receptlibro Malŝaltitas):",
-  "config.roughlyenoughitems.lighterButtonHover": "Pli Hela Ŝvebo de Butono:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Fadeno de Reŝargado de REI:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "Fadeno de REI",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Ordo de Erpanelo:",
-  "config.roughlyenoughitems.itemCheatingMode": "Sumreĝimo de Trompado:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normala",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Inversa",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Postaldoni Legosignoj Sugesto:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Erpanelo Kapti Vicojn:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Erlisto Ago:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Rulumita",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Paĝonumerita",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Limoj de Vertikalaj Eroj:",
   "config.roughlyenoughitems.filteringScreen": "Adaptita Filtrado",
   "config.roughlyenoughitems.filteringRulesScreen": "Adaptita Filtrado Reguloj",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Krei Filtrado Regulon",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Forigi",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Elekti Ĉiujn",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Elekti Neniujn",
+  "config.roughlyenoughitems.filteredEntries.hide": "Kaŝi Elektitajn",
+  "config.roughlyenoughitems.filteredEntries.show": "Montri Elektitajn",
   "rule.roughlyenoughitems.filtering.manual": "Mana Filtrado",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Mane elekti kion kaŝi kaj montri.",
   "rule.roughlyenoughitems.filtering.search": "Serĉo Filtrado",
@@ -189,19 +139,5 @@
   "rule.roughlyenoughitems.filtering.search.filter": "Serĉfiltrilo:",
   "rule.roughlyenoughitems.filtering.search.show": "Montri / Kaŝi:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Montri",
-  "rule.roughlyenoughitems.filtering.search.show.false": "Kaŝi",
-  "language.roughlyenoughitems.english": "Angla",
-  "language.roughlyenoughitems.japanese": "Japana",
-  "language.roughlyenoughitems.chinese_simplified": "Ĉina Simpligita",
-  "language.roughlyenoughitems.chinese_traditional": "Ĉina Tradicia",
-  "language.roughlyenoughitems.french": "Francan",
-  "language.roughlyenoughitems.german": "Germanan",
-  "language.roughlyenoughitems.estonian": "Estona",
-  "language.roughlyenoughitems.portuguese": "Portugala",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portugala, Brazila",
-  "language.roughlyenoughitems.lolcat": "MDRKATO",
-  "language.roughlyenoughitems.upside_down_english": "Renversite Angla",
-  "language.roughlyenoughitems.bulgarian": "Bulgara",
-  "language.roughlyenoughitems.russian": "Rusa",
-  "language.roughlyenoughitems.polish": "Pola"
+  "rule.roughlyenoughitems.filtering.search.show.false": "Kaŝi"
 }
