--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/es_es.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/es_es.json
@@ -19,6 +19,8 @@
   "text.rei.inventory.highlighting.enabled.tooltip": "Esto hace que las ranuras que no coincidan con\nel filtro de búsqueda sean de color gris.\nHaga doble clic en la barra de búsqueda para activar este modo.",
   "text.rei.caching.search": "Cacheando resultados de búsqueda...",
   "text.rei.caching.search.step": "Paso %d/%d (%s%%)",
+  "text.rei.searching": "Resultados de búsqueda REI",
+  "text.rei.searching.step": "Esto es más lento en la primera búsqueda.\nProgreso: %s%%",
   "text.rei.config.menu.dark_theme": "Tema oscuro",
   "text.rei.config.menu.craftable_filter": "Filtro de lo crafteable",
   "text.rei.config.menu.display": "Ajustes de la pantalla",
@@ -78,6 +80,7 @@
   "text.rei.addons": "Los addons de REI",
   "text.rei.shapeless": "Sin forma",
   "text.rei.input.methods": "Métodos de entrada",
+  "text.rei.input.methods.reload.progress": "Progreso: %s%%",
   "text.rei.input.methods.default": "Predeterminado",
   "text.rei.input.methods.default.description": "El método de entrada predeterminado. Esto no transforma el término de búsqueda.",
   "text.rei.input.methods.jyutping": "Jyutping (Cantonés)",
@@ -88,6 +91,11 @@
   "text.rei.input.methods.bopomofo.description": "El método de entrada para coincidir caracteres chinos con Bopomofo (Mandarino).",
   "text.rei.input.methods.hint": "Los métodos de entrada alternativa están disponibles para su idioma.",
   "text.rei.input.methods.initializing": "Inicializando método de entrada",
+  "text.rei.input.methods.tooltip.hints": "Mostrar sugerencias de herramientas",
+  "text.rei.hint.input.methods": "¡Felicidades por configurar un método de entrada!\n¡Puedes volver a configurarlo con el botón de filtro de búsqueda!",
+  "text.rei.hint.favorites.discover": "¡Acabas de eliminar una entrada favorita!\n¡Puedes volver a añadirla haciendo clic en el botón + sobre aquí!",
+  "text.rei.hint.configure": "Configurar",
+  "text.rei.hint.ignore": "Ignorar",
   "ordering.rei.ascending": "Ascendente",
   "ordering.rei.descending": "Descendente",
   "ordering.rei.registry": "Registro",
@@ -174,6 +182,10 @@
   "text.rei.changelog.error.missingChangelogFile": "¡Falta el archivo del registro de cambios!",
   "text.rei.changelog.error.failedToReadChangelogFile": "¡Error al leer el archivo del registro de cambios!",
   "text.rei.collapsed.entry": "Entrada recolectada: %s",
+  "text.rei.collapsed.entry.hint.expand": "Alt-Click para expandir todas las %s (%d entradas)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Opción-Clic para expandir todas las %s (%d entradas)",
+  "text.rei.collapsed.entry.hint.collapse": "Haga Alt-clic para expandir todos los %s (%d entradas)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Haga opción-clic para expandir todos los %s (%d entradas)",
   "favorite.section.gamemode": "Modo de Juego",
   "favorite.section.weather": "Clima",
   "favorite.section.time": "Hora",
@@ -188,150 +200,19 @@
   "subsets.rei.roughlyenoughitems.item_groups": "Pestañas creativas",
   "_comment": "Configurar herramientas",
   "config.roughlyenoughitems.title": "Configuración de Roughly Enough Items",
-  "config.roughlyenoughitems.basics": "Básico",
-  "config.roughlyenoughitems.appearance": "Apariencia",
-  "config.roughlyenoughitems.functionality": "Funcionalidad",
-  "config.roughlyenoughitems.advanced": "Avanzado",
-  "config.roughlyenoughitems.cheating": "Trucos:",
-  "config.roughlyenoughitems.cheating.when_creative": "Mientras este activo el modo creativo",
-  "config.roughlyenoughitems.favoritesEnabled": "Marcado de favoritos:",
-  "config.roughlyenoughitems.keyBindings": "Atajos de teclado",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Mostrar receta:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Ocultar/Mostrar REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Mostrar usos:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Siguiente página:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Página anterior:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Campo de búsqueda enfocada",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Copiar ID de receta:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Exportar receta:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Entrada favorita:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Pantalla Anterior:",
-  "config.roughlyenoughitems.cheatingStyle": "Estilo de trucos:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Agarrar",
-  "config.roughlyenoughitems.cheatingStyle.give": "Dar",
-  "config.roughlyenoughitems.motion": "Ajustes de Animación / Movimiento",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Pantalla de Ajustes Animada:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "Pantalla de Créditos Animada:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "Animaciones marcadas como favoritas:",
-  "config.roughlyenoughitems.recipeScreenType": "Tipo de pantalla de receta:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Tipo de pantalla de receta: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "No establecido",
-  "config.roughlyenoughitems.recipeScreenType.original": "Predeterminado",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Compuesto",
-  "config.roughlyenoughitems.layout": "Diseño",
-  "config.roughlyenoughitems.tooltips": "Sugerencias de herramientas",
-  "config.roughlyenoughitems.accessibility": "Accesibilidad",
-  "config.roughlyenoughitems.search": "Buscar",
-  "config.roughlyenoughitems.commands": "Comandos",
-  "config.roughlyenoughitems.filtering": "Filtrar",
-  "config.roughlyenoughitems.miscellaneous": "Varios",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Flechas de recetas clicables:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Subconjuntos habilitados:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Resaltado del Inventario Activado:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Renderizar efecto de encantamiento",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Posición del botón de configuración:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Superior",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Inferior",
-  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Unir pantallas con contenidos idénticos",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "favoritos añadir botón de widget",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "siempre invisible",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "esconder automáticamente",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "siempre visible",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Seleccionar todo",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Deseleccionar todos",
-  "config.roughlyenoughitems.filteredEntries.hide": "Ocultar selección",
-  "config.roughlyenoughitems.filteredEntries.show": "Mostrar seleccion",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "¡Carga el mundo primero!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Tamaño de entrada:",
-  "config.roughlyenoughitems.search.asyncSearch": "Búsqueda asíncrona:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Tamaño de Partición de Búsqueda Asíncronica:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Pestañas compactas:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "compactar pestaña de botones en flecha",
-  "config.roughlyenoughitems.theme": "Apariencia:",
-  "config.roughlyenoughitems.theme.dark": "Tema oscuro",
-  "config.roughlyenoughitems.theme.light": "Tema claro",
-  "config.roughlyenoughitems.recipeBorder": "Borde de visualización de recetas:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Más claro",
-  "config.roughlyenoughitems.recipeBorder.default": "Predeterminado",
-  "config.roughlyenoughitems.recipeBorder.none": "Ninguno",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Máximo de recetas por página:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "altura máxima para recetas por página",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Posición del panel de entrada:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Lado izquierdo",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Lado derecho",
-  "config.roughlyenoughitems.search.tooltipSearch": "Búsqueda de herramientas (#):",
-  "config.roughlyenoughitems.search.tagSearch": "Búsqueda de etiquetas ($):\n",
-  "config.roughlyenoughitems.search.identifierSearch": "Búsqueda por Identificador (*):",
-  "config.roughlyenoughitems.search.modSearch": "Búsqueda de mods (@):",
-  "config.roughlyenoughitems.search_mode.always": "Siempre activado\n",
-  "config.roughlyenoughitems.search_mode.prefix": "Durante el uso del prefijo",
-  "config.roughlyenoughitems.search_mode.never": "Siempre desactivado\n",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Modo de depuración del panel de entrada:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Buscar en modo de depuración:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Redimensionar dinámicamente:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Posición del campo de búsqueda:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "Esquina izquierda / Derecha",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "Esquina izquierda / Derecha",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Al centro",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Difuminación de la barra de scroll:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Nunca",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Cuando esté inactivo",
-  "config.roughlyenoughitems.disableRecipeBook": "Libro de recetas vanilla:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNo",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aSí",
-  "config.roughlyenoughitems.leftSideMobEffects": "posición de los efectos relativos a creaturas",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Izquierda",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Derecha (Original)",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Arreglar el contenedor de la pestaña de vainilla (cuando el libro de recetas está deshabilitado):",
-  "config.roughlyenoughitems.lighterButtonHover": "Transición de botón más clara:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "filtro es creable =  is craftable filter\nfiltro de creación\n",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Botones útiles:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Comando del modo de juego:",
-  "config.roughlyenoughitems.commands.giveCommand": "Dar comando:",
-  "config.roughlyenoughitems.commands.timeCommand": "comando de tiempo",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Cargar plugin predeterminado:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNo (peligroso)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Recargar hilo de REI:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "Hilo de REI",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cHilo de paquete",
-  "config.roughlyenoughitems.commands.weatherCommand": "Comando del clima:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Orden del panel de entrada:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Renderizado de entrada más rápido:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Caché de entrada de renderizado / Caché de entrada de proyección",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Esta opción mejorará él desempeñó con respecto a la entrada de renderizado/proyeccion hasta en un 500%, pero en la mayoría de los casos lo hará en un 250%. Sin embargo, esto rompera las partículas al encantar y las texturas animadas.\n\n/\n\nEsta opción mejorará él desempeñó con respecto a la entrada de renderizado/proyeccion hasta 5 veces, pero en la mayoría de los casos lo hará 2.5 veces. Sin embargo, esto rompera las partículas al encantar y las texturas animadas.",
-  "config.roughlyenoughitems.itemCheatingMode": "Cantidad de trucos de objetos:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Invertido",
-  "config.roughlyenoughitems.search.searchFavorites": "Buscar filtro en favoritos:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Añadir nombres de mods:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Añadir pista de favoritos:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Ajustar filas del panel de entrada:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Copiar ID de toast:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Acción de la lista de entradas:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Desplazado",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Paginación",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Limite de Entradas Horizontales:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "Limite de Entradas Verticales:",
-  "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "Límite de entradas por columna:",
-  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "Límite de entradas por fila:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "Bordes horizontales para favoritos:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "Límite de columnas para favoritos:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Modo de resaltado de sintaxis",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Simple",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Simple",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Colorido",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Colorido",
-  "config.roughlyenoughitems.isFocusModeZoomed": "Modo de Selección:",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Ampliación",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Resaltado",
-  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Debería filtrar pantallas:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Configurar categorías de creación rápida",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Alternar",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Disponible para la creación rápida",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Excluido de la creación rápida",
   "config.roughlyenoughitems.filteringScreen": "Filtrado personalizado",
   "config.roughlyenoughitems.filteringRulesScreen": "Reglas de filtrado personalizadas",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Crear una regla de filtrado",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Eliminar",
   "config.roughlyenoughitems.filteringRulesScreen.hint": "¡Intenta arrastrar!",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Seleccionar todo",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Deseleccionar todos",
+  "config.roughlyenoughitems.filteredEntries.hide": "Ocultar selección",
+  "config.roughlyenoughitems.filteredEntries.show": "Mostrar seleccion",
   "rule.roughlyenoughitems.filtering.manual": "Filtro manual",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Selecciona manualmente qué ocultar y qué mostrar.",
   "rule.roughlyenoughitems.filtering.search": "Filtro de búsqueda",
@@ -340,27 +221,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Mostrar / Ocultar:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Mostrar",
   "rule.roughlyenoughitems.filtering.search.show.false": "Ocultar",
-  "language.roughlyenoughitems.english": "Inglés",
-  "language.roughlyenoughitems.japanese": "Japonés",
-  "language.roughlyenoughitems.chinese_simplified": "Chino simplificado",
-  "language.roughlyenoughitems.chinese_traditional": "Chino tradicional",
-  "language.roughlyenoughitems.chinese_traditional_hong_kong": "Chino Tradicional (Hong Kong)",
-  "language.roughlyenoughitems.french": "Francés",
-  "language.roughlyenoughitems.german": "Alemán",
-  "language.roughlyenoughitems.estonian": "Estonio",
-  "language.roughlyenoughitems.portuguese": "Portugués",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portugués de Brasil",
-  "language.roughlyenoughitems.lolcat": "LOLCAT",
-  "language.roughlyenoughitems.upside_down_english": "Inglés al revés",
-  "language.roughlyenoughitems.bulgarian": "Búlgaro",
-  "language.roughlyenoughitems.russian": "Ruso",
-  "language.roughlyenoughitems.polish": "Polaco",
-  "language.roughlyenoughitems.norwegian": "Noruego",
-  "language.roughlyenoughitems.turkish": "Turco",
-  "language.roughlyenoughitems.ukrainian": "Ucraniano",
-  "language.roughlyenoughitems.spanish": "Español",
-  "language.roughlyenoughitems.italian": "Italiano",
-  "language.roughlyenoughitems.czech": "Checo",
-  "language.roughlyenoughitems.danish": "Danés",
-  "language.roughlyenoughitems.hebrew": "Hebreo"
+  "rule.roughlyenoughitems.filtering.basic": "Filtrado básico de plug-in",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filtrar entradas por plug-ins REI. Esto no es configurable aquí.",
+  "rule.roughlyenoughitems.filtering.hide.tag": "Filtrado de etiquetas",
+  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Filtrar entradas por 'c:hidden_from_recipe_viewers'. Esto no es configurable aquí."
 }
