--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/et_ee.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/et_ee.json
@@ -40,6 +40,7 @@
   "text.rei.config_tooltip": "Ava seadistuskuva\n§7Shift-klõps sohitegemise lülitamiseks",
   "text.rei.cheat_items": "{item_count} [{item_name}§f] antud mängijale {player_name}.",
   "text.rei.failed_cheat_items": "§cEsemete andmine ebaõnnestus.",
+  "text.rei.hint.ignore": "Ignoreeri",
   "ordering.rei.ascending": "kasvav",
   "ordering.rei.descending": "kahanev",
   "ordering.rei.registry": "Register",
@@ -66,6 +67,10 @@
   "text.rei.choose_page": "Vali leht",
   "text.rei.gamemode_button.tooltip.entry": "Lülita režiimile %s",
   "text.rei.weather_button.tooltip.entry": "Lülita režiimile %s",
+  "text.rei.time_button.name.morn": "Hommik",
+  "text.rei.time_button.name.noon": "Keskpäev",
+  "text.rei.time_button.name.evening": "Õhtu",
+  "text.rei.time_button.name.night": "Öö",
   "text.rei.reload_config": "Laadi pluginad uuesti",
   "text.rei.config.is.reloading": "Pluginaid laaditakse uuesti!",
   "text.rei.enabled": "Jah",
@@ -96,6 +101,8 @@
   "text.rei.tiny_potato": "Väiksed kardulad",
   "text.rei.add_favorite_widget": "Lisa...",
   "favorite.section.gamemode": "Mängurežiim",
+  "favorite.section.weather": "Ilm",
+  "favorite.section.time": "Aeg",
   "tooltip.rei.fluid_amount": "§7%d ühik",
   "msg.rei.copied_recipe_id": "Retsepti ID kopeeritud",
   "msg.rei.recipe_id_details": "Retsepti ID: %s",
@@ -105,119 +112,14 @@
   "subsets.rei.roughlyenoughitems.item_groups": "Loomingulise kaardid",
   "_comment": "Seadistuse vihjetekstid",
   "config.roughlyenoughitems.title": "Roughly Enough Items seadistus",
-  "config.roughlyenoughitems.basics": "Põhiline",
-  "config.roughlyenoughitems.appearance": "Välimus",
-  "config.roughlyenoughitems.functionality": "Funktsionaalsus",
-  "config.roughlyenoughitems.advanced": "Täpsemad",
-  "config.roughlyenoughitems.cheating": "Sohitegemine:",
-  "config.roughlyenoughitems.favoritesEnabled": "Lemmikud lubatud:",
-  "config.roughlyenoughitems.keyBindings": "Kiirklahvid",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Näita retsepti:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Peida/kuva REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Näita kasutusvõimalusi:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Järgmine leht:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Eelmine leht:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Fookusta otsingukast:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Kopeeri retsepti ID:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Ekspordi retsept:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Lisa lemmikutesse:",
-  "config.roughlyenoughitems.cheatingStyle": "Sohitegemise viis:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Haara",
-  "config.roughlyenoughitems.cheatingStyle.give": "Anna",
-  "config.roughlyenoughitems.recipeScreenType": "Retseptikuva tüüp:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Retseptikuva tüüp: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Määramata",
-  "config.roughlyenoughitems.recipeScreenType.original": "Vaikimisi",
-  "config.roughlyenoughitems.layout": "Paigutus",
-  "config.roughlyenoughitems.tooltips": "Näpunäited",
-  "config.roughlyenoughitems.accessibility": "Ligipääsetavus",
-  "config.roughlyenoughitems.search": "Otsing",
-  "config.roughlyenoughitems.commands": "Käsklused",
-  "config.roughlyenoughitems.filtering": "Filtreerimine",
-  "config.roughlyenoughitems.miscellaneous": "Varia",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Klõpsatavad retseptide nooled:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Alamjaotised lubatud:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Seljakoti esiletõst lubatud:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Kuva loitsukuma:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Seadistusnupu asukoht:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Ülemine",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Alumine",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Vali kõik",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Tühista kõik valikud",
-  "config.roughlyenoughitems.filteredEntries.hide": "Peida valitud",
-  "config.roughlyenoughitems.filteredEntries.show": "Kuva valitud",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Laadi kõigepealt maailm!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Üksuse suurus:",
-  "config.roughlyenoughitems.search.asyncSearch": "Asünkroonne otsing:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Asünkroonne otsingu partitsiooni suurus:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Kompaktsed kaardid:",
-  "config.roughlyenoughitems.theme": "Välimuse teema:",
-  "config.roughlyenoughitems.theme.dark": "Tume teema",
-  "config.roughlyenoughitems.theme.light": "Hele teema",
-  "config.roughlyenoughitems.recipeBorder": "Retsepti kuva ääris:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Heledam",
-  "config.roughlyenoughitems.recipeBorder.default": "Vaikimisi",
-  "config.roughlyenoughitems.recipeBorder.none": "Puuduv",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Maksimaalselt retsepte lehe kohta:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Esemepaneeli asukoht:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Vasakul",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Paremal",
-  "config.roughlyenoughitems.search.tooltipSearch": "Näpunäite otsing (#):",
-  "config.roughlyenoughitems.search.tagSearch": "Sildiotsing ($):",
-  "config.roughlyenoughitems.search.modSearch": "Modiotsing (@):",
-  "config.roughlyenoughitems.search_mode.always": "Alati lubatud",
-  "config.roughlyenoughitems.search_mode.prefix": "Eesliidet kasutades",
-  "config.roughlyenoughitems.search_mode.never": "Alati keelatud",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Esemepaneeli silumisrežiim:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Otsingu silumisrežiim:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Muuda suurust dünaamiliselt:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Otsingukasti asukoht:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "All vasakul/paremal",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "Üleval vasakul/paremal",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Keskel",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Külaelaniku retseptikuva kerimisriba:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Püsiv",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Automaatselt hajuv",
-  "config.roughlyenoughitems.disableRecipeBook": "Vanilli retseptiraamat:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cEi",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aJah",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Paranda vanilli Tab-konteiner (kui retseptiraamat on keelatud):",
-  "config.roughlyenoughitems.lighterButtonHover": "Heledam nupul hõljumine:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Režiimide nupud:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Mängurežiimi käsklus:",
-  "config.roughlyenoughitems.commands.giveCommand": "Sohiga andmise käsklus:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Laadi vaikimisi plugin:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cEi (ohtlik)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI taaslaadimise lõim:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI lõim",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cPaketilõim",
-  "config.roughlyenoughitems.commands.weatherCommand": "Ilma käsklus:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Esemepaneeli järjestus:",
-  "config.roughlyenoughitems.list_ordering_button": "%s (%s)",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Kiirem üksuse renderdamine:",
-  "config.roughlyenoughitems.itemCheatingMode": "Esemete sohina andmise hulk:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Tavaline",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Pööratud",
-  "config.roughlyenoughitems.search.searchFavorites": "Otsingufilter lemmikutes:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Lisa juurde modinimed:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Lisa lemmikute vihje:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Esemepaneeli ridadele paigutumine:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Kopeeri ID hüpik:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Esemenimekirja tegevus:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Keritav",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Lehekülgedega",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Horisontaalsete üksuste piirded:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "Vertikaalsete üksuste piirded:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Süntaksi esiletõstu režiim:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Lihtne",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Lihtne (alakriipsuga)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Värviline",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Värviline (alakriipsuga)",
   "config.roughlyenoughitems.filteringScreen": "Kohandatud filtreerimine",
   "config.roughlyenoughitems.filteringRulesScreen": "Kohandatud filtreerimisreeglid",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Loo filtreerimisreegel",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Kustuta",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Vali kõik",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Tühista kõik valikud",
+  "config.roughlyenoughitems.filteredEntries.hide": "Peida valitud",
+  "config.roughlyenoughitems.filteredEntries.show": "Kuva valitud",
   "rule.roughlyenoughitems.filtering.manual": "Käsitsi filtreerimine",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Vali käsitsi, mida kuvada ja peita.",
   "rule.roughlyenoughitems.filtering.search": "Otsingu filtreerimine",
@@ -225,19 +127,5 @@
   "rule.roughlyenoughitems.filtering.search.filter": "Otsingufilter:",
   "rule.roughlyenoughitems.filtering.search.show": "Kuva/peida:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Kuva",
-  "rule.roughlyenoughitems.filtering.search.show.false": "Peida",
-  "language.roughlyenoughitems.english": "inglise",
-  "language.roughlyenoughitems.japanese": "jaapani",
-  "language.roughlyenoughitems.chinese_simplified": "lihtsustatud hiina",
-  "language.roughlyenoughitems.chinese_traditional": "traditsiooniline hiina",
-  "language.roughlyenoughitems.french": "prantsuse",
-  "language.roughlyenoughitems.german": "saksa",
-  "language.roughlyenoughitems.estonian": "eesti",
-  "language.roughlyenoughitems.portuguese": "portugali",
-  "language.roughlyenoughitems.portuguese_brazilian": "portugali, Brasiilia",
-  "language.roughlyenoughitems.lolcat": "LOLCAT",
-  "language.roughlyenoughitems.upside_down_english": "tagurpidi inglise",
-  "language.roughlyenoughitems.bulgarian": "bulgaaria",
-  "language.roughlyenoughitems.russian": "vene",
-  "language.roughlyenoughitems.polish": "poola"
+  "rule.roughlyenoughitems.filtering.search.show.false": "Peida"
 }
