--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/he_il.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/he_il.json
@@ -118,116 +118,13 @@
   "msg.rei.exported_recipe": "מתכון מיוצא",
   "subsets.rei.roughlyenoughitems.item_groups": "כרטיסייות מצב יצירתי",
   "config.roughlyenoughitems.title": "קונפיגורציה REI",
-  "config.roughlyenoughitems.basics": "בסיסים",
-  "config.roughlyenoughitems.appearance": "תצוגה",
-  "config.roughlyenoughitems.functionality": "מעשה",
-  "config.roughlyenoughitems.advanced": "מתקדם",
-  "config.roughlyenoughitems.cheating": "רמאות:",
-  "config.roughlyenoughitems.favoritesEnabled": "רשימת פריטים שמורים פועלת:",
-  "config.roughlyenoughitems.keyBindings": "מקשים",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "הצג מתכון:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "הסתר/הראה REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "הצג שימושים:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "עמוד הבא:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "עמוד קודם:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "העתק זהות מתכון:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "מסך קודם:",
-  "config.roughlyenoughitems.cheatingStyle": "סטייל של רמאות:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "תפוס",
-  "config.roughlyenoughitems.cheatingStyle.give": "תן",
-  "config.roughlyenoughitems.motion": "הגדרות אנימציה / תזוזה",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "מסך קונפיגורציה מונפש:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "מסך קרדיטים מונפש:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "רשימת פריטים שמורים מונפשת:",
-  "config.roughlyenoughitems.recipeScreenType": "סוג מסך מתכון:",
-  "config.roughlyenoughitems.recipeScreenType.config": "סוג מסך מתכון: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "לא נקבע",
-  "config.roughlyenoughitems.recipeScreenType.original": "ברירת מחדל",
-  "config.roughlyenoughitems.layout": "פריסה",
-  "config.roughlyenoughitems.tooltips": "תאורים",
-  "config.roughlyenoughitems.accessibility": "נגישות",
-  "config.roughlyenoughitems.search": "חיפוש",
-  "config.roughlyenoughitems.commands": "פקודות",
-  "config.roughlyenoughitems.filtering": "סינון",
-  "config.roughlyenoughitems.miscellaneous": "שונות",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "חצי מתכונים לחיצים",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "הראה זהירת כישוף:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "מקום כפטור קונפיגורציה",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "למעלה יותר",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "נמוך יותר",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "תמיד בלתי נראה",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "הסתרה אוטומטית",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "תמיד נראה",
+  "config.roughlyenoughitems.filteringRulesScreen.delete": "מחק",
   "config.roughlyenoughitems.filteredEntries.selectAll": "בחר הכל",
   "config.roughlyenoughitems.filteredEntries.selectNone": "אל תבחר כלום",
   "config.roughlyenoughitems.filteredEntries.hide": "הסתר בחור",
   "config.roughlyenoughitems.filteredEntries.show": "הצג בחור",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "טעון עולם קודם!",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "כרטיסיות קומפקטיות:",
-  "config.roughlyenoughitems.theme.dark": "מצג כהה",
-  "config.roughlyenoughitems.theme.light": "מצב בהיר",
-  "config.roughlyenoughitems.recipeBorder.lighter": "בהיר יותר",
-  "config.roughlyenoughitems.recipeBorder.default": "ברירת מחדל",
-  "config.roughlyenoughitems.recipeBorder.none": "כלום",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "צד שמאל",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "צד ימין",
-  "config.roughlyenoughitems.search.tooltipSearch": "חיפוש לפי תאורים (#):",
-  "config.roughlyenoughitems.search.tagSearch": "חיפוש לפי תווית ($):",
-  "config.roughlyenoughitems.search.identifierSearch": "חיפוש לפי מזהה (*):",
-  "config.roughlyenoughitems.search.modSearch": "חיפוש לפי מוד (@):",
-  "config.roughlyenoughitems.search_mode.always": "תמיד פעיל",
-  "config.roughlyenoughitems.search_mode.prefix": "כאשר משתמשים בקידומת",
-  "config.roughlyenoughitems.search_mode.never": "תמיד מבוטל",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "למטה בשמאל / ימין",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "למעלה בשמאל / ימין",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "באמצע",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "דהיית סרגל הגלילה:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "לעולם לא",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "כאשר אינו פעיל",
-  "config.roughlyenoughitems.disableRecipeBook": "ספר מתכונים של וונילה:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cלא",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§cכן",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "שמאל",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "ימין (רגיל)",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "פקודת מצב משחק:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "טען פלאגין ברירת מחדל:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cלא (מסוכן)",
-  "config.roughlyenoughitems.commands.weatherCommand": "פקודת מזג אוויר:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.itemCheatingMode": "כמות רמאות פריטים",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "נורמלי",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "הפוך",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "פשוט",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "פשוט (עם קו תחתון)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "צבעוני",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "מודגש",
-  "config.roughlyenoughitems.filteringRulesScreen.delete": "מחק",
   "rule.roughlyenoughitems.filtering.search.filter": "מסנן חיפוש:",
   "rule.roughlyenoughitems.filtering.search.show": "הצג / הסתר:",
   "rule.roughlyenoughitems.filtering.search.show.true": "הצג",
-  "rule.roughlyenoughitems.filtering.search.show.false": "הסתר",
-  "language.roughlyenoughitems.english": "אנגלית",
-  "language.roughlyenoughitems.japanese": "יפנית",
-  "language.roughlyenoughitems.chinese_simplified": "סינית מופשטת",
-  "language.roughlyenoughitems.chinese_traditional": "סינית מסורתית",
-  "language.roughlyenoughitems.chinese_traditional_hong_kong": "סינית מסורתית, הונג קונג",
-  "language.roughlyenoughitems.french": "צרפתית",
-  "language.roughlyenoughitems.german": "גרמנית",
-  "language.roughlyenoughitems.estonian": "אסטונית",
-  "language.roughlyenoughitems.portuguese": "פורטוגזית",
-  "language.roughlyenoughitems.portuguese_brazilian": "פורטוגזית, ברזילאית",
-  "language.roughlyenoughitems.lolcat": "חתולול",
-  "language.roughlyenoughitems.upside_down_english": "אנגלית הפוכה",
-  "language.roughlyenoughitems.bulgarian": "בולגרית",
-  "language.roughlyenoughitems.russian": "רוסית",
-  "language.roughlyenoughitems.polish": "פולנית",
-  "language.roughlyenoughitems.norwegian": "נורווגית",
-  "language.roughlyenoughitems.turkish": "טורקית",
-  "language.roughlyenoughitems.ukrainian": "אוקראינית",
-  "language.roughlyenoughitems.spanish": "ספרדית",
-  "language.roughlyenoughitems.italian": "איטלקית",
-  "language.roughlyenoughitems.czech": "צ'כית",
-  "language.roughlyenoughitems.danish": "דנית",
-  "language.roughlyenoughitems.hebrew": "עברית"
+  "rule.roughlyenoughitems.filtering.search.show.false": "הסתר"
 }
