--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/it_it.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/it_it.json
@@ -14,7 +14,16 @@
   "text.rei.support.me.patreon": "Dona su Patreon",
   "text.rei.support.me.bisect": "Usa il codice SHEDANIEL su BisectHosting",
   "text.rei.not.fully.initialized": "REI non è ancora completamente inizializzato!",
+  "text.rei.not.fully.initialized.tooltip": "Stadi mancanti: %s\nSe questo non va via,\nprova a cercare aiuto nei logs!",
   "text.rei.inventory.highlighting.enabled": "Evidenziamento dell'Inventario Abilitato",
+  "text.rei.inventory.highlighting.enabled.tooltip": "Questo rende gli slot che non corrispondono al filtro di ricerca grigi.\nFai doppio click sulla barra di ricerca per attivare o disattivare questa modalità.",
+  "text.rei.caching.search": "REI sta salvando i risultati di ricerca nella cache...",
+  "text.rei.caching.search.step": "Passaggio %d/%d (%s%%):",
+  "text.rei.searching": "REI sta cercando i risultati...",
+  "text.rei.searching.step": "Questo è più lento alla prima ricerca.\nProgresso: %s%%",
+  "text.rei.config.menu.dark_theme": "Tema Scuro",
+  "text.rei.config.menu.config": "Più Opzioni...",
+  "text.rei.config.menu.search_field.position": "Posizione del Campo di Ricerca...",
   "category.rei.crafting": "Fabbricazione",
   "category.rei.smelting": "Fusione",
   "category.rei.smelting.fuel": "Carburante",
@@ -41,6 +50,7 @@
   "category.rei.beacon_payment": "Pagamento del Faro",
   "category.rei.tilling": "Coltivando",
   "category.rei.pathing": "Percorso",
+  "category.rei.tag": "Tag",
   "category.rei.information": "Informazione",
   "text.rei.composting.chance": "§e%d%% Di probabilità",
   "text.rei.composting.page": "Pagina %d",
@@ -48,6 +58,9 @@
   "text.rei.config_tooltip": "Apri schermata di configurazione\n§7Clicca Shift per attivare la modalità cheat",
   "text.rei.cheat_items": "Ho dato [{item_name}§f] x{item_count} a {player_name}.",
   "text.rei.failed_cheat_items": "§cImpossibile dare gli oggetti.",
+  "text.rei.accepts": "Accetta seguenti:",
+  "text.rei.missing": "Mancano seguenti:",
+  "text.rei.performance": "Analisi delle Performance",
   "ordering.rei.ascending": "Crescente",
   "ordering.rei.descending": "Decrescente",
   "ordering.rei.registry": "Registro",
@@ -104,6 +117,8 @@
   "text.rei.tiny_potato": "Piccola Patata",
   "text.rei.add_favorite_widget": "Aggiungi...",
   "favorite.section.gamemode": "Modalità di Gioco",
+  "favorite.section.weather": "Meteo",
+  "favorite.section.time": "Tempo",
   "tooltip.rei.fluid_amount": "§7%d Unità",
   "msg.rei.copied_recipe_id": "Identificatore della Ricetta Copiato",
   "msg.rei.recipe_id_details": "Id della Ricetta: %s",
@@ -112,109 +127,14 @@
   "subsets.rei.roughlyenoughitems.all_entries": "Tutte le Voci",
   "subsets.rei.roughlyenoughitems.item_groups": "Schede della Creativa",
   "config.roughlyenoughitems.title": "Configurazione di Roughly Enough Items",
-  "config.roughlyenoughitems.basics": "Basi",
-  "config.roughlyenoughitems.appearance": "Aspetto",
-  "config.roughlyenoughitems.functionality": "Funzionalità",
-  "config.roughlyenoughitems.advanced": "Avanzate",
-  "config.roughlyenoughitems.cheating": "Cheating:",
-  "config.roughlyenoughitems.favoritesEnabled": "Preferiti Abilitati:",
-  "config.roughlyenoughitems.keyBindings": "Associazioni di Pulsanti",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Mostra Ricetta:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Nascondi/Mostra REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Mostra Usi:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Pagina Successiva:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Pagina Precedente:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Metti a Fuoco il Campo Di Ricerca:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Copia Identificatore Ricetta:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Esporta Ricetta:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Voce Preferita:",
-  "config.roughlyenoughitems.cheatingStyle": "Stile di Cheating:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Raccogli",
-  "config.roughlyenoughitems.cheatingStyle.give": "Givva",
-  "config.roughlyenoughitems.recipeScreenType": "Tipo di Schermata della Ricetta:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Tipo di Schermata della Ricetta: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Non Impostato",
-  "config.roughlyenoughitems.recipeScreenType.original": "Predefinito",
-  "config.roughlyenoughitems.layout": "Layout",
-  "config.roughlyenoughitems.tooltips": "Suggerimenti",
-  "config.roughlyenoughitems.accessibility": "Accessibilità",
-  "config.roughlyenoughitems.search": "Cerca",
-  "config.roughlyenoughitems.commands": "Comandi",
-  "config.roughlyenoughitems.filtering": "Filtraggio",
-  "config.roughlyenoughitems.miscellaneous": "Varie",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Frecce della Ricetta Cliccabili:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Sottogruppi Abilitati:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Evidenziamento dell'Inventario Abilitato:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Renderizza il Luccichio dell'Incantesimo",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Posizione del Pulsante di Configurazione:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Superiore",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Inferiore",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Seleziona Tutto",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Deseleziona Tutto",
-  "config.roughlyenoughitems.filteredEntries.hide": "Nascondi Selezionati",
-  "config.roughlyenoughitems.filteredEntries.show": "Mostra Selezionati",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Carica Il Mondo Prima!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Dimensione Voce:",
-  "config.roughlyenoughitems.search.asyncSearch": "Ricerca Asincrona:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Dimensione Partizione di Ricerca Asincrona:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Schede Compatte:",
-  "config.roughlyenoughitems.theme": "Tema dell'Aspetto:",
-  "config.roughlyenoughitems.theme.dark": "Tema Scuro",
-  "config.roughlyenoughitems.theme.light": "Tema Chiaro",
-  "config.roughlyenoughitems.recipeBorder": "Bordo della Schermata della Ricetta:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Più chiaro",
-  "config.roughlyenoughitems.recipeBorder.default": "Predefinito",
-  "config.roughlyenoughitems.recipeBorder.none": "Nessuno",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Ricette Massime Per Pagina:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Posizione del Pannello delle Voci:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Lato Sinistro",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Lato Destro",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Modalità Debug del Pannello delle Voci:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Modalità Debug della Ricerca ",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Ridimensiona Dinamicamente:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Posizione del Campo di Ricerca:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "In Basso a Sinistra / Destra",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "In Alto a Sinistra / Destra",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Centrale",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Dissolvenza della Barra di Scorrimento",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Mai",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Quando Inattiva",
-  "config.roughlyenoughitems.disableRecipeBook": "Libro delle Ricette Vanilla:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNo",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aSì",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Sistema il Contenitore Tab Vanilla (Quando il Libro delle Ricette È Disabilitato):",
-  "config.roughlyenoughitems.lighterButtonHover": "Pulsante Fluttuante Più Chiaro:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Pulsanti di Utilità:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Comando della Modalità di Gioco:",
-  "config.roughlyenoughitems.commands.giveCommand": "Comando per Givvare:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Carica Plugin Predefinito:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNo (pericoloso)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Ricarica del Thread REI",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "Thread REI",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cThread Pacchetto",
-  "config.roughlyenoughitems.commands.weatherCommand": "Comando per il Meteo:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Ordinamento del Pannello delle Voci:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Rendering di Voci Più Veloce:",
-  "config.roughlyenoughitems.itemCheatingMode": "Quantità di Cheating degli Oggetti:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normale",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Invertito",
-  "config.roughlyenoughitems.search.searchFavorites": "Filtro di Ricerca nei Preferiti:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Aggiungi Nomi delle Mod:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Aggiungi Suggerimento Preferiti:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Aggancio del Pannello delle Voci alle Righe",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Copia l'Avviso Popup dell'Identificatore:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Azione della Lista delle Voci:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Scorrimento",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Paginato",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Bordi delle Voci Orizzontali:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "Bordi delle Voci Verticali:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Modalità evidenziazione sintassi:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
   "config.roughlyenoughitems.filteringScreen": "Filtraggio Personalizzato",
   "config.roughlyenoughitems.filteringRulesScreen": "Regole di Filtraggio Personalizzate",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Crea Regola di Filtraggio",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Elimina",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Seleziona Tutto",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Deseleziona Tutto",
+  "config.roughlyenoughitems.filteredEntries.hide": "Nascondi Selezionati",
+  "config.roughlyenoughitems.filteredEntries.show": "Mostra Selezionati",
   "rule.roughlyenoughitems.filtering.manual": "Filtraggio Manuale",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Seleziona manualmente cosa nascondere e mostrare.",
   "rule.roughlyenoughitems.filtering.search": "Filtro di Ricerca",
@@ -222,23 +142,5 @@
   "rule.roughlyenoughitems.filtering.search.filter": "Filtro di Ricerca:",
   "rule.roughlyenoughitems.filtering.search.show": "Mostra / Nascondi:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Mostra",
-  "rule.roughlyenoughitems.filtering.search.show.false": "Nascondi",
-  "language.roughlyenoughitems.english": "Inglese",
-  "language.roughlyenoughitems.japanese": "Giapponese",
-  "language.roughlyenoughitems.chinese_simplified": "Cinese Semplificato",
-  "language.roughlyenoughitems.chinese_traditional": "Cinese Tradizionale",
-  "language.roughlyenoughitems.french": "Francese",
-  "language.roughlyenoughitems.german": "Tedesco",
-  "language.roughlyenoughitems.estonian": "Estone",
-  "language.roughlyenoughitems.portuguese": "Portoghese",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portoghese, Brasiliano",
-  "language.roughlyenoughitems.lolcat": "LOLCAT",
-  "language.roughlyenoughitems.upside_down_english": "Inglese Sotto Sopra",
-  "language.roughlyenoughitems.bulgarian": "Bulgaro",
-  "language.roughlyenoughitems.russian": "Russo",
-  "language.roughlyenoughitems.polish": "Polacco",
-  "language.roughlyenoughitems.italian": "Italiano",
-  "language.roughlyenoughitems.czech": "Ceco",
-  "language.roughlyenoughitems.danish": "Danese",
-  "language.roughlyenoughitems.hebrew": "Ebraico"
+  "rule.roughlyenoughitems.filtering.search.show.false": "Nascondi"
 }
