--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
@@ -30,6 +30,7 @@
   "text.rei.config.menu.display.side_search_field": "측면 검색 필드",
   "text.rei.config.menu.display.syntax_highlighting": "구문 강조",
   "text.rei.config.menu.config": "기타 설정",
+  "text.rei.config.menu.search_field.position": "검색창 위치...",
   "text.rei.config.menu.search_field.input_method": "입력 방식",
   "category.rei.crafting": " 제작",
   "category.rei.smelting": "제련",
@@ -77,6 +78,7 @@
   "text.rei.addons": "REI 애드온",
   "text.rei.shapeless": "형식 없음",
   "text.rei.input.methods": "입력 방식",
+  "text.rei.input.methods.reload.progress": "진행도: %s%%",
   "text.rei.input.methods.default": "기본값",
   "text.rei.input.methods.default.description": "기본 입력 방식입니다. 검색어를 변환하지 않습니다.",
   "text.rei.input.methods.jyutping": "광둥어",
@@ -87,6 +89,7 @@
   "text.rei.input.methods.bopomofo.description": "주음부호 입력 방식입니다.",
   "text.rei.input.methods.hint": "언어에 따른 다른 입력 방식도 사용 가능합니다.",
   "text.rei.input.methods.initializing": "입력 방식 초기화 중",
+  "text.rei.input.methods.tooltip.hints": "툴팁 힌트 표시",
   "text.rei.hint.configure": "구성",
   "text.rei.hint.ignore": "무시",
   "ordering.rei.ascending": "오름차순",
@@ -174,7 +177,7 @@
   "text.rei.changelog.title": "REI 변경점",
   "text.rei.changelog.error.missingChangelogFile": "변경내역 파일이 없습니다!",
   "text.rei.changelog.error.failedToReadChangelogFile": "변경내역 파일을 읽지 못했습니다!",
-  "text.rei.collapsed.entry": "붕괴된 항목: %s",
+  "text.rei.collapsed.entry": "축소된 항목: %s",
   "favorite.section.gamemode": "게임 모드",
   "favorite.section.weather": "날씨",
   "favorite.section.time": "시간",
@@ -189,151 +192,15 @@
   "subsets.rei.roughlyenoughitems.item_groups": "크리에이티브 탭",
   "_comment": "설정 툴팁",
   "config.roughlyenoughitems.title": "Roughly Enough Items 설정",
-  "config.roughlyenoughitems.basics": "기본",
-  "config.roughlyenoughitems.appearance": "모양",
-  "config.roughlyenoughitems.functionality": "기능",
-  "config.roughlyenoughitems.advanced": "고급",
-  "config.roughlyenoughitems.cheating": "치트",
-  "config.roughlyenoughitems.cheating.when_creative": "크리에이티브 모드에서",
-  "config.roughlyenoughitems.favoritesEnabled": "즐겨찾기 사용:",
-  "config.roughlyenoughitems.keyBindings": "키 설정",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "제작법 보기:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "REI 숨김/보기:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "사용처 보기:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "다음 페이지:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "이전 페이지:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "검색창으로 포커스 이동:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "제작법 ID 복사:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "제작법 내보내기:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "즐겨찾기 추가:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "이전 화면:",
-  "config.roughlyenoughitems.cheatingStyle": "치트 형식:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "잡기",
-  "config.roughlyenoughitems.cheatingStyle.give": "주기",
-  "config.roughlyenoughitems.motion": "애니메이션 / 모션 설정",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "설정 화면 애니메이션:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "크레딧 화면 애니메이션:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "즐겨찾기 애니메이션:",
-  "config.roughlyenoughitems.recipeScreenType": "제작법 화면 종류:",
-  "config.roughlyenoughitems.recipeScreenType.config": "제작법 화면 종류: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "설정 안함",
-  "config.roughlyenoughitems.recipeScreenType.original": "기본형",
-  "config.roughlyenoughitems.recipeScreenType.composite": "혼합형",
-  "config.roughlyenoughitems.layout": "레이아웃",
-  "config.roughlyenoughitems.tooltips": "툴팁",
-  "config.roughlyenoughitems.accessibility": "접근성",
-  "config.roughlyenoughitems.search": "검색",
-  "config.roughlyenoughitems.commands": "명령어",
-  "config.roughlyenoughitems.filtering": "필터링",
-  "config.roughlyenoughitems.miscellaneous": "기타",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "제작법 화살표 클릭 가능:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "그룹 필터 사용:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "보관함 강조 활성화됨:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "마법 부여 반짝임 효과 렌더링:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "설정 버튼 위치:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "상단",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "하단",
-  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "같은 내용을 가진 화면 병합:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "즐겨찾기 추가 위젯 버튼:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "항상 숨김",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "자동 숨김",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "항상 표시",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "전체 선택",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "전체 선택해제",
-  "config.roughlyenoughitems.filteredEntries.hide": "선택 아이템 숨김",
-  "config.roughlyenoughitems.filteredEntries.show": "선택 아이템 표시",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "먼저 세계를 불러오세요!",
-  "config.roughlyenoughitems.accessibility.entrySize": "항목 크기:",
-  "config.roughlyenoughitems.search.asyncSearch": "비동기 검색:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "비동기 검색 파티션 크기:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "압축 탭:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "소형 탭 화살표 버튼:",
-  "config.roughlyenoughitems.theme": "모양 테마:",
-  "config.roughlyenoughitems.theme.dark": "어두운 테마",
-  "config.roughlyenoughitems.theme.light": "밝은 테마",
-  "config.roughlyenoughitems.recipeBorder": "제작법 창 테두리:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "더 밝게",
-  "config.roughlyenoughitems.recipeBorder.default": "기본",
-  "config.roughlyenoughitems.recipeBorder.none": "없음",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "페이지당 표시할 제작법 개수:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "제작법 페이지 최대 높이:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "항목 패널 위치:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "왼쪽",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "오른쪽",
-  "config.roughlyenoughitems.search.tooltipSearch": "툴팁 검색 (#):",
-  "config.roughlyenoughitems.search.tagSearch": "태그 검색 ($):",
-  "config.roughlyenoughitems.search.identifierSearch": "ID 검색 (*):",
-  "config.roughlyenoughitems.search.modSearch": "모드 검색 (@):",
-  "config.roughlyenoughitems.search_mode.always": "항상 사용",
-  "config.roughlyenoughitems.search_mode.prefix": "접두사 사용 시",
-  "config.roughlyenoughitems.search_mode.never": "항상 사용안함",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "항목 패널 디버그 모드:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "검색 디버그 모드:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "동적 크기 조정:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "검색창 위치:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "하단 왼쪽 / 오른쪽",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "상단 왼쪽 / 오른쪽",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "가운데",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "스크롤바 페이드:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "안함",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "비활성화일 떄",
-  "config.roughlyenoughitems.disableRecipeBook": "바닐라 제작법 책:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§c아니오",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§a예",
-  "config.roughlyenoughitems.leftSideMobEffects": "몬스터 효과 위치:",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "왼쪽",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "오른쪽 (바닐라)",
-  "config.roughlyenoughitems.fixTabCloseContainer": "바닐라 탭 제작대 수정 (제작법 책이 사용안될 때):",
-  "config.roughlyenoughitems.lighterButtonHover": "버튼 호버 효과 더 밝게:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "제작가능 필터:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "유틸리티 버튼:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "게임 모드 명령어:",
-  "config.roughlyenoughitems.commands.giveCommand": "주기 명령어:",
-  "config.roughlyenoughitems.commands.timeCommand": "시간 명령어:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "기본 플러그인 불러오기:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§c아니오 (위험)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI 다시 불러오기 스레드:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI 스레드",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§c패킷 스레드",
-  "config.roughlyenoughitems.commands.weatherCommand": "날씨 명령어:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "항목 정렬 순서:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "더 빠른 항목 렌더링:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "항목 렌더링 캐싱:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "이 설정은 항목 렌더링 성능을 최대 5배, 평균 2.5배 향상시킵니다. 하지만 마법 부여 반짝임이나 움직이는 텍스처 기능을 망가트립니다.",
-  "config.roughlyenoughitems.itemCheatingMode": "치트 모드 아이템 개수:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "일반",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "반전",
-  "config.roughlyenoughitems.search.searchFavorites": "즐겨찾기 검색 필터:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "모드 이름 추가:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "즐겨찾기 힌트 추가:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "항목 패널 행 하나씩 스크롤:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "ID 알림 복사:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "항목 목록 액션:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "스크롤",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "페이지",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "아이템 목록 수평 경계:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "아이템 목록 수직 경계:",
-  "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "아이템 목록 열 제한:",
-  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "아이템 목록 행 제한:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "즐겨찾기 목록 수평 경계:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "즐겨찾기 목록 열 제한:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "구문 강조 모드:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "\"%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "일반 텍스트",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "일반 텍스트 (밑줄)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "색 강조",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "색 강조 (밑줄)",
-  "config.roughlyenoughitems.isFocusModeZoomed": "항목 포커스 모드:",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "확대/축소됨",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "강조됨",
-  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "필터 표시:",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "구성...",
   "config.roughlyenoughitems.filteringScreen": "사용자 정의 필터",
   "config.roughlyenoughitems.filteringRulesScreen": "사용자 정의 필터 규칙",
   "config.roughlyenoughitems.filteringRulesScreen.new": "필터링 규칙 생성",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "삭제",
   "config.roughlyenoughitems.filteringRulesScreen.hint": "드래그 하세요!",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "전체 선택",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "전체 선택해제",
+  "config.roughlyenoughitems.filteredEntries.hide": "선택 아이템 숨김",
+  "config.roughlyenoughitems.filteredEntries.show": "선택 아이템 표시",
   "rule.roughlyenoughitems.filtering.manual": "수동 필터링",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "어떤 아이템을 숨기고 표시할 건지 직접 선택합니다.",
   "rule.roughlyenoughitems.filtering.search": "검색 필터링",
@@ -342,27 +209,6 @@
   "rule.roughlyenoughitems.filtering.search.show": "표시 / 숨김:",
   "rule.roughlyenoughitems.filtering.search.show.true": "표시",
   "rule.roughlyenoughitems.filtering.search.show.false": "숨김",
-  "language.roughlyenoughitems.english": "영어",
-  "language.roughlyenoughitems.japanese": "일본어",
-  "language.roughlyenoughitems.chinese_simplified": "중국어 (간체)",
-  "language.roughlyenoughitems.chinese_traditional": "중국어 (번체)",
-  "language.roughlyenoughitems.chinese_traditional_hong_kong": "중국어 (번체), 홍콩",
-  "language.roughlyenoughitems.french": "프랑스어",
-  "language.roughlyenoughitems.german": "독일어",
-  "language.roughlyenoughitems.estonian": "에스토니아어",
-  "language.roughlyenoughitems.portuguese": "포르투칼어",
-  "language.roughlyenoughitems.portuguese_brazilian": "포르투칼어, 브라질어",
-  "language.roughlyenoughitems.lolcat": "롤캣",
-  "language.roughlyenoughitems.upside_down_english": "거꾸로 된 영어",
-  "language.roughlyenoughitems.bulgarian": "불가리아어",
-  "language.roughlyenoughitems.russian": "러시아어",
-  "language.roughlyenoughitems.polish": "폴란드어",
-  "language.roughlyenoughitems.norwegian": "노르웨이어",
-  "language.roughlyenoughitems.turkish": "터키어",
-  "language.roughlyenoughitems.ukrainian": "우크라이나어",
-  "language.roughlyenoughitems.spanish": "스페인어",
-  "language.roughlyenoughitems.italian": "이탈리아어",
-  "language.roughlyenoughitems.czech": "체코어",
-  "language.roughlyenoughitems.danish": "덴마크어",
-  "language.roughlyenoughitems.hebrew": "히브리어"
+  "rule.roughlyenoughitems.filtering.basic": "기본 플러그인 필터링",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "REI 플러그인으로 항목을 필터링합니다. 여기서는 구성할 수 없습니다."
 }
