--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -78,6 +78,7 @@
   "text.rei.addons": "Complementos do REI",
   "text.rei.shapeless": "Sem forma",
   "text.rei.input.methods": "Meios de Entrada",
+  "text.rei.input.methods.reload.progress": "Progresso: %s%%",
   "text.rei.input.methods.default": "Padrão",
   "text.rei.input.methods.default.description": "Meio de entrada padrão. Não altera a forma de pesquisa.",
   "text.rei.input.methods.jyutping": "Jyutping (Cantonês)",
@@ -88,6 +89,9 @@
   "text.rei.input.methods.bopomofo.description": "O meio de entrada para caracteres chineses correspondentes ao Bopomofo (Mandarim)",
   "text.rei.input.methods.hint": "Meios de entrada alternativos estão disponíveis para seu idioma.",
   "text.rei.input.methods.initializing": "Inicializando Meio de Entrada",
+  "text.rei.input.methods.tooltip.hints": "Exibir dicas de ferramenta",
+  "text.rei.hint.input.methods": "Parabéns por configurar um método de entrada!\nVocê pode re-configurar isso com o Botão de Filtro de Busca!",
+  "text.rei.hint.favorites.discover": "Você acabou de remover uma entrada favorita!\nVocê pode adicioná-la de volta clicando no botão + aqui!",
   "text.rei.hint.configure": "Configurar",
   "text.rei.hint.ignore": "Ignorar",
   "ordering.rei.ascending": "Crescente",
@@ -194,152 +198,19 @@
   "subsets.rei.roughlyenoughitems.item_groups": "Guias do Criativo",
   "_comment": "Descrição de ajustes",
   "config.roughlyenoughitems.title": "Ajustes do Roughly Enough Items",
-  "config.roughlyenoughitems.basics": "Básico",
-  "config.roughlyenoughitems.appearance": "Estilo",
-  "config.roughlyenoughitems.functionality": "Funções",
-  "config.roughlyenoughitems.advanced": "Avançado",
-  "config.roughlyenoughitems.cheating": "Trapaças:",
-  "config.roughlyenoughitems.cheating.when_creative": "No modo Criativo",
-  "config.roughlyenoughitems.favoritesEnabled": "Ativar favoritos",
-  "config.roughlyenoughitems.keyBindings": "Atalhos",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Mostrar receita:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Ocultar/Mostrar REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Usos:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Avançar:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Voltar:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Campo de busca em foco:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Copiar ID da receita:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Exportar receita:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Adicionar aos favoritos:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Tela anterior:",
-  "config.roughlyenoughitems.cheatingStyle": "Estilo de trapaça:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Pegar",
-  "config.roughlyenoughitems.cheatingStyle.give": "Dar",
-  "config.roughlyenoughitems.motion": "Ajustes de animação",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Animação dos ajustes:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "Animação da tela de créditos:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "Favoritos animados:",
-  "config.roughlyenoughitems.recipeScreenType": "Estilo da tela de receita:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Estilo da tela de receita: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Indefinido",
-  "config.roughlyenoughitems.recipeScreenType.original": "Padrão",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Composta",
-  "config.roughlyenoughitems.layout": "Layout",
-  "config.roughlyenoughitems.tooltips": "Descrições",
-  "config.roughlyenoughitems.accessibility": "Acessibilidade",
-  "config.roughlyenoughitems.search": "Busca",
-  "config.roughlyenoughitems.commands": "Comandos",
-  "config.roughlyenoughitems.filtering": "Filtros",
-  "config.roughlyenoughitems.miscellaneous": "Diversos",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Setas de receita clicáveis:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Ativar subconjuntos:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Destaque de inventário ativado:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Brilho do encantamento:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Posição dos botões de ajustes:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Superior",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Inferior",
-  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Unir visores de conteúdo idêntico:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Botão de widget dos favoritos:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Sempre invisível",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Ocultar auto.",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Sempre visível",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Selecionar tudo",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Desmarcar todos",
-  "config.roughlyenoughitems.filteredEntries.hide": "Ocultar selecionados",
-  "config.roughlyenoughitems.filteredEntries.show": "Mostrar selecionados",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Carregue o mundo primeiro!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Tamanho da entrada:",
-  "config.roughlyenoughitems.search.asyncSearch": "Pesquisa assíncrona:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Tamanho de partição da pesquisa assíncrona:",
-  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "Falha de encadeamento assíncrono de patch:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Guias compactas:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Flechas compactas:",
-  "config.roughlyenoughitems.theme": "Tema:",
-  "config.roughlyenoughitems.theme.dark": "Escuro",
-  "config.roughlyenoughitems.theme.light": "Claro",
-  "config.roughlyenoughitems.recipeBorder": "Canto da receita:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Claro",
-  "config.roughlyenoughitems.recipeBorder.default": "Padrão",
-  "config.roughlyenoughitems.recipeBorder.none": "Não",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Limite de receitas por página:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Altura máxima da página de receitas:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Posição do painel de entradas:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Esquerdo",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Direito",
-  "config.roughlyenoughitems.search.tooltipSearch": "Busca por descrição (#):",
-  "config.roughlyenoughitems.search.tagSearch": "Busca por tag ($):",
-  "config.roughlyenoughitems.search.identifierSearch": "Busca por ID (*):",
-  "config.roughlyenoughitems.search.modSearch": "Busca por mod (@):",
-  "config.roughlyenoughitems.search_mode.always": "Sempre ativo",
-  "config.roughlyenoughitems.search_mode.prefix": "Ao usar prefixo",
-  "config.roughlyenoughitems.search_mode.never": "Sempre inativo",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Depuração do painel de entradas:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Busca por depuração:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Escala dinâmica:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Posição do campo de busca:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "Inferior esq./Direita",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "Superior esq./Direita",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Centro",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Esmaecimento da barra:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Nunca",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Quando inativo",
-  "config.roughlyenoughitems.disableRecipeBook": "Livro de receitas padrão:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNão",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aSim",
-  "config.roughlyenoughitems.leftSideMobEffects": "Posição de efeitos de criaturas:",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Esquerda",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Direita (padrão)",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Corrigir contêiner de guias padrão (livro de receitas desativado):",
-  "config.roughlyenoughitems.lighterButtonHover": "Cursor mínimo do botão:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Fabricáveis:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Botões utilitários:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Comando do modo de jogo:",
-  "config.roughlyenoughitems.commands.giveCommand": "Comando \"give\":",
-  "config.roughlyenoughitems.commands.timeCommand": "Comando de Tempo:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Carregar plug-in padrão:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNão (perigoso)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Thread de recarga:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "Thread do REI",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cThread de pacote",
-  "config.roughlyenoughitems.commands.weatherCommand": "Comando do tempo:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Ordem do painel de entrada",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Renderização rápida de entradas:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Memorizando entrada:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Essa opção aumentará o desempenho em até cinco vezes ao renderizar as entradas, com uma média de duas vezes e meia de ganho. As texturas animadas e brilhos cintilantes serão desativados.",
-  "config.roughlyenoughitems.itemCheatingMode": "Número de itens por trapaça:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Comum",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Invertido",
-  "config.roughlyenoughitems.search.searchFavorites": "Filtro de busca nos favoritos:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Incluir nomes de mods:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Incluir dicas aos favoritos:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Linhas de troca de entradas:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Copiar toast de identificação:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Formato da lista de entradas:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Rolagem",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Páginas",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Limites de entradas horizontais:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "Limites das entradas verticais:",
-  "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "Limite de colunas de entradas:",
-  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "Limite de linhas de entradas:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "Limites horizontais dos favoritos:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "Limite de colunas dos favoritos:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Modo de destaque da sintaxe:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Simples",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Simples (sublinhado)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Colorido",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Colorido (sublinhado)",
-  "config.roughlyenoughitems.isFocusModeZoomed": "Modo de foco da entrada:",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Ampliado",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Realçado",
-  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Exibir filtros:",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Configurar...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Configurando Categorias de Criação Rápida",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Alternar",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Disponível na Fabricação Rápida",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Excluído da Fabricação Rápida",
   "config.roughlyenoughitems.filteringScreen": "Filtro personalizado",
   "config.roughlyenoughitems.filteringRulesScreen": "Regras de filtros personalizados",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Criar regra para filtro",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Excluir",
   "config.roughlyenoughitems.filteringRulesScreen.hint": "Tente arrastar!",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Selecionar tudo",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Desmarcar todos",
+  "config.roughlyenoughitems.filteredEntries.hide": "Ocultar selecionados",
+  "config.roughlyenoughitems.filteredEntries.show": "Mostrar selecionados",
   "rule.roughlyenoughitems.filtering.manual": "Filtro manual",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Selecionar manualmente o que ocultar e mostrar.",
   "rule.roughlyenoughitems.filtering.search": "Filtro de busca",
@@ -348,27 +219,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Mostrar/Ocultar:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Mostrar",
   "rule.roughlyenoughitems.filtering.search.show.false": "Ocultar",
-  "language.roughlyenoughitems.english": "Inglês",
-  "language.roughlyenoughitems.japanese": "Japonês",
-  "language.roughlyenoughitems.chinese_simplified": "Chinês simplificado",
-  "language.roughlyenoughitems.chinese_traditional": "Chinês tradicional",
-  "language.roughlyenoughitems.chinese_traditional_hong_kong": "Chinês tradicional (Hong Kong)",
-  "language.roughlyenoughitems.french": "Francês",
-  "language.roughlyenoughitems.german": "Alemão",
-  "language.roughlyenoughitems.estonian": "Estoniano",
-  "language.roughlyenoughitems.portuguese": "Português (Portugal)",
-  "language.roughlyenoughitems.portuguese_brazilian": "Português (Brasil)",
-  "language.roughlyenoughitems.lolcat": "Lolcat",
-  "language.roughlyenoughitems.upside_down_english": "Inglês de ponta cabeça",
-  "language.roughlyenoughitems.bulgarian": "Búlgaro",
-  "language.roughlyenoughitems.russian": "Russo",
-  "language.roughlyenoughitems.polish": "Polonês",
-  "language.roughlyenoughitems.norwegian": "Norueguês",
-  "language.roughlyenoughitems.turkish": "Turco",
-  "language.roughlyenoughitems.ukrainian": "Ucraniano",
-  "language.roughlyenoughitems.spanish": "Espanhol",
-  "language.roughlyenoughitems.italian": "Italiano",
-  "language.roughlyenoughitems.czech": "Tcheco",
-  "language.roughlyenoughitems.danish": "Dinamarquês",
-  "language.roughlyenoughitems.hebrew": "Hebraico"
+  "rule.roughlyenoughitems.filtering.basic": "Filtragem Básica de Plugin",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filtrar entradas por plugins REI. Isto não é configurável aqui.",
+  "rule.roughlyenoughitems.filtering.hide.tag": "Filtro de Tag",
+  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Filtrar entradas por 'c:hidden_from_recipe_viewers'. Isto não é configurável aqui."
 }
