--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/tr_tr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/tr_tr.json
@@ -7,7 +7,7 @@
   "text.rei.cheating_limited_creative_enabled": "§aHileler Açıldı (Yaratıcı Kullanılıyor)",
   "text.rei.no_permission_cheat": "Hileli eşyalar için yönetici (OP) izinleri gerekiyor",
   "text.rei.search.field.suggestion": "Ara...",
-  "text.rei.feedback": "REI geliştiricisine bir geri bildirim vermek ister misin? % adresinden gönderebilirsin!",
+  "text.rei.feedback": "REI geliştiricisine bir geri bildirim vermek ister misin? %s adresinden gönderebilirsin!",
   "text.rei.feedback.link": "Google Form'u ziyaret etmek için bana tıkla",
   "text.rei.support.me": "REI'yı daha iyi yapmama devam etmem için bana destek verin!",
   "text.rei.support.me.desc": "REI'ın patreon destekçisi olarak, REI'ın en son sürümünü Minecraft snapshotlarında kullanabileceksin.\nAlternatif olarak, beni ayrıca BisectHosting'den, server kiralayarak finansal olarak destekleyebilirsin.\n\n%s\n%s",
@@ -19,6 +19,8 @@
   "text.rei.inventory.highlighting.enabled.tooltip": "Bu arama filtresinde uyuşmayan yuvaları gri yapmaya yarar.\nBu modu açıp/kapatmak için arama çubuğuna çift tıklayın.",
   "text.rei.caching.search": "REI arama sonuçlarını kaydediyor...",
   "text.rei.caching.search.step": "Adım %d/%d (%s%%):",
+  "text.rei.searching": "REI arama sonuçları...",
+  "text.rei.searching.step": "İlk aramada daha yavaş çalışır.\nİlerleme: %s%%",
   "text.rei.config.menu.dark_theme": "Koyu Tema",
   "text.rei.config.menu.craftable_filter": "Üretilebilenler Filtresi",
   "text.rei.config.menu.display": "Görüntü Ayarları",
@@ -62,6 +64,7 @@
   "category.rei.wax_scraping": "Mumya Sökümü",
   "category.rei.oxidizing": "Oksitlenme",
   "category.rei.oxidation_scraping": "Oksitlenme Sökümü",
+  "category.rei.tag": "Etiket",
   "category.rei.information": "Bilgi",
   "text.rei.composting.chance": "§e%d%% Şans",
   "text.rei.composting.page": "%d. Sayfa",
@@ -70,9 +73,23 @@
   "text.rei.cheat_items": "{player_name} oyuncusuna {item_count} tane [{item_name}§f] verildi.",
   "text.rei.failed_cheat_items": "§cEşyalar verilemedi.",
   "text.rei.too_long_nbt": "§cItem NBT, çok oyunculuda uygulanamayacak kadar uzun.",
+  "text.rei.accepts": "Şunları kabul eder:",
+  "text.rei.tag_accept": "Etiket: #%s",
+  "text.rei.missing": "Şunlar eksik:",
   "text.rei.performance": "Performans Analizi",
   "text.rei.addons": "REI Eklentileri",
   "text.rei.shapeless": "Şekilsiz",
+  "text.rei.input.methods": "Girdi Yöntemleri",
+  "text.rei.input.methods.reload.progress": "İlerleme: %s%%",
+  "text.rei.input.methods.default": "Varsayılan",
+  "text.rei.input.methods.default.description": "Varsayılan girdi yöntemi: Bu arama terimini dönüştürmez.",
+  "text.rei.input.methods.hint": "Alternatif girdi yöntemleri sizin diliniz için mevcut değildir.",
+  "text.rei.input.methods.initializing": "Girdi Yöntemi Başlatılıyor",
+  "text.rei.input.methods.tooltip.hints": "Alet İpuçlarını Göster",
+  "text.rei.hint.input.methods": "Bir girdi yöntemi seçtiğiniz için tebrikler!\nBunu Arama Filtresi Tuşu ile yeniden yapılandırabilirsiniz!",
+  "text.rei.hint.favorites.discover": "Az önce bir favori girdiyi kaldırdınız!\nOnu buradaki + tuşuna basarak yeniden ekleyebilirsiniz!",
+  "text.rei.hint.configure": "Yapılandır",
+  "text.rei.hint.ignore": "Görmezden Gel",
   "ordering.rei.ascending": "Artan",
   "ordering.rei.descending": "Azalan",
   "ordering.rei.registry": "Kayıt",
@@ -81,12 +98,16 @@
   "text.auto_craft.move_items": "Eşyaları Taşı",
   "text.auto_craft.move_items.tooltip": "Hızlıca Üretmek için Ctrl-Tıkla",
   "text.auto_craft.move_items.yog": "NullPointerException!! Oluştur",
+  "text.rei.expand.view": "Gelişmiş Görünümü Aç",
+  "text.rei.expand.view.close": "Gelişmiş Görünümü Kapa",
+  "text.rei.tag.copy.clipboard": "Etiket Ağacını panoya kopyala",
   "error.rei.transfer.too_small": "%dx%d ızgarasında eşyalar taşınamadı.",
   "error.rei.not.on.server": "REI sunucuda yok.",
   "error.rei.not.enough.materials": "Yetersiz materyal.",
   "error.rei.internal.error": "İç Hata: %s",
   "error.rei.recipe.not.unlocked": "Tarif, Tarif Kitabı'nda açılmamış.",
   "error.rei.not.supported.move.items": "Bu tarifte ve konteynırda Öğeyi Taşıma desteklenmiyor.",
+  "text.rei.save.recipes": "Bu tarifi sonrası için kadetmek için %s tuşuna basın.",
   "error.rei.no.handlers.applicable": "İşleyiciler uygulanabilir değil.",
   "error.rei.multi.errors": "Çoklu Hata:",
   "rei.rei.no.slot.in.inv": "Eşya için envanterde yeterli alan bulunamıyor.",
@@ -104,6 +125,7 @@
   "text.rei.gamemode_button.tooltip.entry": "%s 'e geç",
   "text.rei.weather_button.tooltip.dropdown": "Hava Durumunu Değiştir: Açılır Liste",
   "text.rei.weather_button.tooltip.entry": "%s 'e geç",
+  "text.rei.time_button.tooltip.dropdown": "Anahtar Süresi: Açılır Menü",
   "text.rei.time_button.tooltip.entry": "%s 'e geç",
   "text.rei.time_button.name.morn": "Sabah",
   "text.rei.time_button.name.noon": "Öğlen",
@@ -132,6 +154,8 @@
   "text.rei.remove_favorites_tooltip": " \n§Bunu favoriden kaldırmak için %s tuşuna bas.",
   "text.rei.working_station": "Çalışma İstasyonu",
   "text.rei.release_export": "Dışa aktarım için %s tuşunu bırak",
+  "text.rei.ask_to_export": "\"%s\"u dışa aktarmak ister misiniz?",
+  "text.rei.ask_to_export.subtitle": "Bu %d görüntüsünü fotoğraf olarak dışarı aktaracak.",
   "text.rei.recipe_id": "%sTarif ID'si: %s",
   "text.rei.recipe_screen_type.selection": "Tarif Ekran Türü Seçimi",
   "text.rei.recipe_screen_type.selection.sub": "Bu ayarı her zaman ayar menüsünden düzenleyebilirsin.",
@@ -151,6 +175,11 @@
   "text.rei.changelog.title": "REI Değişimkaydı",
   "text.rei.changelog.error.missingChangelogFile": "Değişimkaydı Dosyası Eksik!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Değişimkaydı Dosyasını okumakta Başarısız olundu!",
+  "text.rei.collapsed.entry": "Kapanmış Girdi: %s",
+  "text.rei.collapsed.entry.hint.expand": "Tüm %s'leri açmak için ALT tuşuna basın (%d girdileri)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Tüm %s (%d girişleri genişletmek için Seçenek-Tıkla",
+  "text.rei.collapsed.entry.hint.collapse": "Tüm %s (%d girişi) daraltmak için Alt tıklayın",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Tüm %s (%d girişi) daraltmak için Option-Tıkla",
   "favorite.section.gamemode": "Oyun Modu",
   "favorite.section.weather": "Hava Durumu",
   "favorite.section.time": "Zaman",
@@ -165,134 +194,19 @@
   "subsets.rei.roughlyenoughitems.item_groups": "Yaratıcı Sekmeler",
   "_comment": "İpuçlarını Ayarla",
   "config.roughlyenoughitems.title": "Roughly Enough Items Ayarları",
-  "config.roughlyenoughitems.basics": "Temeller",
-  "config.roughlyenoughitems.appearance": "Görünüm",
-  "config.roughlyenoughitems.functionality": "İşlevsellik",
-  "config.roughlyenoughitems.advanced": "Gelişmiş",
-  "config.roughlyenoughitems.cheating": "Hile:",
-  "config.roughlyenoughitems.cheating.when_creative": "Yaratıcı Modunda",
-  "config.roughlyenoughitems.favoritesEnabled": "Favoriler Açık:",
-  "config.roughlyenoughitems.keyBindings": "Tuş Atamaları",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Tarifi Göster:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "REI'yi Gizle/Göster:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Kullanımları Göster:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Sonraki Sayfa:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Önceki Sayfa:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Arama Alanına Odaklan:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Tarif ID'sini Kopyala",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Tarifi Dışa Aktar:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Favori Girdi:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Önceki Ekran:",
-  "config.roughlyenoughitems.cheatingStyle": "Hile Stili:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Tutma",
-  "config.roughlyenoughitems.cheatingStyle.give": "Verme",
-  "config.roughlyenoughitems.motion": "Animasyon/Hareket Ayarları",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Yapılandırma Ekranı Animasyonlu:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "Animasyonlu Emeği Geçenler Ekranı:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "Animasyonlu Favoriler:",
-  "config.roughlyenoughitems.recipeScreenType": "Tarif Ekran Türü:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Tarif Ekranı Türü: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Ayarlanmamış",
-  "config.roughlyenoughitems.recipeScreenType.original": "Varsayılan",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Birleşik",
-  "config.roughlyenoughitems.layout": "Yerleşim",
-  "config.roughlyenoughitems.tooltips": "İpuçları",
-  "config.roughlyenoughitems.accessibility": "Erişilebilirlik",
-  "config.roughlyenoughitems.search": "Arama",
-  "config.roughlyenoughitems.commands": "Komutlar",
-  "config.roughlyenoughitems.filtering": "Filtreleme",
-  "config.roughlyenoughitems.miscellaneous": "Çeşitli",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Tıklanabilir Tarif Okları:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Alt Setler Etkin:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Envanter Vurgulama Etkinleştirildi:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Büyü Işıltısını Göster:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Ayar Tuş Konumu:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Üst",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Düşük",
-  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Görüntüleri eşit bir şekilde İçeriklerle birleştir:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favorilere Araç Tuşu Ekle:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Her zaman Görünmez",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Otomatik Gizle",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Her zaman görünür",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Hepsini Seç",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Tüm Seçimleri Kaldır",
-  "config.roughlyenoughitems.filteredEntries.hide": "Seçilenleri Gizle",
-  "config.roughlyenoughitems.filteredEntries.show": "Seçilenleri Göster",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "İlk Önce Dünyayı Yükle!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Girdi Boyutu:",
-  "config.roughlyenoughitems.search.asyncSearch": "Desenkronize Arama:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Eş Zamansız Arama Bölümü Boyutu:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Küçük Sekmeler:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Ok Sekmesi Butonunu Kompaktla:",
-  "config.roughlyenoughitems.theme": "Görünüm Teması:",
-  "config.roughlyenoughitems.theme.dark": "Koyu Tema",
-  "config.roughlyenoughitems.theme.light": "Açık Tema",
-  "config.roughlyenoughitems.recipeBorder": "Tarif Ekran Kenarlığı:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Daha açık",
-  "config.roughlyenoughitems.recipeBorder.default": "Varsayılan",
-  "config.roughlyenoughitems.recipeBorder.none": "Yok",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Bir Sayfa Başına Maksimum Tarif:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Tarif Sayfasının olabilecek En fazla Yüksekliği",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Girdi Listesi Yeri:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Sol Taraf",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Sağ Taraf",
-  "config.roughlyenoughitems.search.tooltipSearch": "İpucu Araması (#):",
-  "config.roughlyenoughitems.search.tagSearch": "Etiket Araması ($):",
-  "config.roughlyenoughitems.search.identifierSearch": "Belirteç Araması (*):",
-  "config.roughlyenoughitems.search.modSearch": "Mod Araması (@):",
-  "config.roughlyenoughitems.search_mode.always": "Her Zaman Etkin",
-  "config.roughlyenoughitems.search_mode.prefix": "Ön Ek Kullanırken",
-  "config.roughlyenoughitems.search_mode.never": "Her Zaman Devre Dışı",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Girdi Listesi Hata Ayıklama Modu:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Arama Hata Ayıklama Modu:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Dinamik Olarak Ölçekle:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Arama Alanı Pozisyonu:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "En Alt Sol/Sağ",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "En Üst Sol/Sağ",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Orta",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Kaydırma Çubuğu Solması:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Asla",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "Aktif Değilken",
-  "config.roughlyenoughitems.disableRecipeBook": "Vanilla Tarif Kitabı:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cHayır",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aEvet",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Vanilla Sekme Penceresini Düzelt (Tarif Kitabı Devre Dışıyken):",
-  "config.roughlyenoughitems.lighterButtonHover": "Daha Açık İmleç Üstü Tuş:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Araç Tuşları:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Oyun Modu Komutu:",
-  "config.roughlyenoughitems.commands.giveCommand": "Komut Ver:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Varsayılan Eklentiyi Yükle:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cHayır (Tehlikeli)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI Parçacığını Yeniden Yükle:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI Parçacığı",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cPaket Başlığı",
-  "config.roughlyenoughitems.commands.weatherCommand": "Hava Komutu:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Girdi Listesi Sıralaması:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Daha Hızlı Girdi Görüntüleme:",
-  "config.roughlyenoughitems.itemCheatingMode": "Eşya Hile Miktarı:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Terse Çevrili",
-  "config.roughlyenoughitems.search.searchFavorites": "Favoriler'de Arama Filtresi:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Mod Adlarını Sonuna Ekle:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Favori İpucu Ekleyin:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Girdi Listesi Satırlara Bağlanır:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Belirtici Kutucuğu Kopyala:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Girdi Listesi Eylemi:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Fare ile Kaydırılmış",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Sayfalandırılmış",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Yatay Girdilerin Sınırları:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "Dikey Girdilerin Sınırları:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Syntax Vurgulama Modu:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Düz",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Düz (Altı çizili)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Renkli",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Renkli (Altı çizili)",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Quick Craft Kategorileri Yapılandırılıyor",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Aç/Kapat",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Quick Craft için kullanılabilir",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Quick Craft'tan çıkarıldı",
   "config.roughlyenoughitems.filteringScreen": "Özelleştirilmiş filtreler",
   "config.roughlyenoughitems.filteringRulesScreen": "Özelleştirilmiş Filtreleme Kuralları",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Filtreleme Kuralı Oluştur",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Sil",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "Sürüklemeyi deneyin!",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Hepsini Seç",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Tüm Seçimleri Kaldır",
+  "config.roughlyenoughitems.filteredEntries.hide": "Seçilenleri Gizle",
+  "config.roughlyenoughitems.filteredEntries.show": "Seçilenleri Göster",
   "rule.roughlyenoughitems.filtering.manual": "Elle Filtreleme",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Neyin saklanacağını ve gösterileceğini manuel olarak seç.",
   "rule.roughlyenoughitems.filtering.search": "Arama Filtresi",
@@ -301,26 +215,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Göster/Gizle:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Göster",
   "rule.roughlyenoughitems.filtering.search.show.false": "Gizle",
-  "language.roughlyenoughitems.english": "İngilizce",
-  "language.roughlyenoughitems.japanese": "Japonca",
-  "language.roughlyenoughitems.chinese_simplified": "Çince (Basitleştirilmiş)",
-  "language.roughlyenoughitems.chinese_traditional": "Çince (Geleneksel)",
-  "language.roughlyenoughitems.french": "Fransızca",
-  "language.roughlyenoughitems.german": "Almanca",
-  "language.roughlyenoughitems.estonian": "Estonya Dili",
-  "language.roughlyenoughitems.portuguese": "Portekizce",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portekizce (Brezilya)",
-  "language.roughlyenoughitems.lolcat": "LOLCAT Dili",
-  "language.roughlyenoughitems.upside_down_english": "İngilizce (Tersten)",
-  "language.roughlyenoughitems.bulgarian": "Bulgarca",
-  "language.roughlyenoughitems.russian": "Rusça",
-  "language.roughlyenoughitems.polish": "Lehçe",
-  "language.roughlyenoughitems.norwegian": "Norveçce",
-  "language.roughlyenoughitems.turkish": "Türkçe",
-  "language.roughlyenoughitems.ukrainian": "Ukraynaca",
-  "language.roughlyenoughitems.spanish": "İspanyolca",
-  "language.roughlyenoughitems.italian": "İtalyanca",
-  "language.roughlyenoughitems.czech": "Çekçe",
-  "language.roughlyenoughitems.danish": "Danca",
-  "language.roughlyenoughitems.hebrew": "İbranice\n"
+  "rule.roughlyenoughitems.filtering.basic": "Temel Eklenti Filtreleme",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Girişleri REI eklentilerine göre filtreleyin. Bu, burada yapılandırılamaz.",
+  "rule.roughlyenoughitems.filtering.hide.tag": "Etiket Filtremele",
+  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Girişleri 'c:hidden_from_recipe_viewers'a göre filtreleyin. Bu, burada yapılandırılamaz."
 }
