--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/vi_vn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/vi_vn.json
@@ -97,50 +97,8 @@
   "text.rei.jei_compat": "Lớp tương thích JEI",
   "text.rei.jei_compat.false": "Lớp tương thích JEI: Đã tắt",
   "text.rei.jei_compat.true": "Lớp tương thích JEI: Đã bật",
-  "config.roughlyenoughitems.cheatingStyle.give": "Cho",
-  "config.roughlyenoughitems.motion": "Cài đặt Hoạt ảnh / Chuyển động",
-  "config.roughlyenoughitems.recipeScreenType": "Kiểu màn hình công thức:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Kiểu màn hình công thức: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Chưa đặt",
-  "config.roughlyenoughitems.recipeScreenType.original": "Mặc định",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Kết hợp",
-  "config.roughlyenoughitems.layout": "Bố cục",
-  "config.roughlyenoughitems.tooltips": "Chỉ dẫn",
-  "config.roughlyenoughitems.accessibility": "Trợ năng",
-  "config.roughlyenoughitems.search": "Tìm kiếm",
-  "config.roughlyenoughitems.commands": "Danh sách lệnh",
-  "config.roughlyenoughitems.filtering": "Lọc",
-  "config.roughlyenoughitems.miscellaneous": "Khác",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Mũi tên công thức có thể ấn được:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Bật đánh dấu túi đồ:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Hiển thị hiệu ứng phù phép:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Vị trí nút cấu hình:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Phía trên",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Thấp hơn",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Luôn vô hình",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Tự động ẩn",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Luôn hiển thị",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Chọn tất cả",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Bỏ chọn tất cả",
   "config.roughlyenoughitems.filteredEntries.hide": "Ẩn cái đã chọn",
-  "config.roughlyenoughitems.filteredEntries.show": "Hiển thị mục đã chọn",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Tải thế giới trước!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Kích thước mục nhập:",
-  "config.roughlyenoughitems.search.asyncSearch": "Tìm kiếm không đồng bộ:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Kích thước phân vùng tìm kiếm không đồng bộ:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Các Tab Thu gọn:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Các nút Mũi tên của Tab Thu gọn:",
-  "config.roughlyenoughitems.theme": "Chủ đề:",
-  "config.roughlyenoughitems.theme.dark": "Chủ đề tối",
-  "config.roughlyenoughitems.theme.light": "Chủ đề sáng",
-  "config.roughlyenoughitems.recipeBorder": "Đường viền hiển thị công thức:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Sáng hơn",
-  "config.roughlyenoughitems.recipeBorder.default": "Mặc định",
-  "config.roughlyenoughitems.recipeBorder.none": "Không có",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Công thức tối đa trên mỗi trang:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Chiều cao tối đa trang công thức:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Vị trí bảng mục nhập:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Bên trái",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Đảo ngược",
-  "config.roughlyenoughitems.search.searchFavorites": "Tìm trong danh sách Yêu thích:"
+  "config.roughlyenoughitems.filteredEntries.show": "Hiển thị mục đã chọn"
 }
